--- a/source/web/doku.php﹖id=nl﹕dansen﹕wals.html
+++ b/source/web/doku.php﹖id=nl﹕dansen﹕wals.html
@@ -1,56 +1,10 @@
 <article id="dokuwiki__content" class="container">
 
-        <div class="panel panel-default">
-          <div class="page panel-body">
 
-                <div class="plugin_multilingual">
-        <ul>
-          <li>
-            <div class="li">
-              <div class="flag_not_exists">
-                <a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_14_tijden.html" class="media" title="de:dansen:wals"><img src="lib/exe/fetch.php?cache=&amp;tok=3951d8&amp;media=http%3A%2F%2Fwww.balfolkenschede.nl%2Fdanswiki%2Flib%2Fplugins%2Fmultilingual%2Fflags%2Fde.gif" class="media" title="Deutsch (German)" alt="Deutsch (German)"/></a>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="li">
-              <div class="flag_not_exists">
-                <a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_14_tijden.html" class="media" title="en:dansen:wals"><img src="lib/exe/fetch.php?cache=&amp;tok=081a56&amp;media=http%3A%2F%2Fwww.balfolkenschede.nl%2Fdanswiki%2Flib%2Fplugins%2Fmultilingual%2Fflags%2Fgb.gif" class="media" title="English" alt="English"/></a>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="li">
-              <div class="flag_not_exists">
-                <a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕kadootjesbourree.html" class="media" title="es:dansen:wals"><img src="lib/exe/fetch.php?cache=&amp;tok=94b49f&amp;media=http%3A%2F%2Fwww.balfolkenschede.nl%2Fdanswiki%2Flib%2Fplugins%2Fmultilingual%2Fflags%2Fmx.gif" class="media" title="Español (Spanish, Mexico)" alt="Español (Spanish, Mexico)"/></a>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="li">
-              <div class="flag_not_exists">
-                <a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_14_tijden.html" class="media" title="fr:dansen:wals"><img src="lib/exe/fetch.php?cache=&amp;tok=b3b66b&amp;media=http%3A%2F%2Fwww.balfolkenschede.nl%2Fdanswiki%2Flib%2Fplugins%2Fmultilingual%2Fflags%2Ffr.gif" class="media" title="Français (French)" alt="Français (French)"/></a>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="li">
-              <span class="curid"><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_14_tijden.html" class="media" title="nl:dansen:wals"><img src="lib/exe/fetch.php?cache=&amp;tok=6c23c8&amp;media=http%3A%2F%2Fwww.balfolkenschede.nl%2Fdanswiki%2Flib%2Fplugins%2Fmultilingual%2Fflags%2Fnl.gif" class="media" title="Nederlands" alt="Nederlands"/></a></span>
-            </div>
-          </li>
-          <li>
-            <div class="li">
-              <div class="flag_not_exists">
-                <a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_14_tijden.html" class="media" title="pt:dansen:wals"><img src="lib/exe/fetch.php?cache=&amp;tok=81e9d4&amp;media=http%3A%2F%2Fwww.balfolkenschede.nl%2Fdanswiki%2Flib%2Fplugins%2Fmultilingual%2Fflags%2Fpt.gif" class="media" title="Português (Portuguese, Portugal)" alt="Português (Portuguese, Portugal)"/></a>
-              </div>
-            </div>
-          </li>
-        </ul>
-      </div>
 <div id="dw__pagetools" class="hidden-print panel panel-default">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-      <li><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_14_tijden.html" class="action text-muted source" accesskey="v" rel="nofollow" title="Toon broncode [V]"><i class="fa fa-fw fa-pencil-square-o"></i><span class="sr-only"> Toon broncode</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_14_tijden.html" class="wikilink2" title="discussion:nl:dansen:wals" rel="nofollow"><i class="fa fa-fw fa-comments"></i><span class="sr-only"> Discussion</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_14_tijden.html" class="action text-muted revs" accesskey="o" rel="nofollow" title="Oude revisies [O]"><i class="fa fa-fw fa-clock-o"></i><span class="sr-only"> Oude revisies</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_14_tijden.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_14_tijden.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
   </div>
 </div>
 
@@ -145,7 +99,7 @@ Je staat in half-open houding, ergens op de dansvloer. De paren die snel willen 
 <h3 class="sectionedit5" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
 <div class="level3">
 <ul>
-<li class="level1"><div class="li">French Waltz (Valse) instructie</div>
+
 </li>
 </ul>
 <iframe src="https://www.youtube.com/embed/honwsw_O-W" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe><ul>
