fix broken html

--- a/source/web/algemeen/danshouding.html
+++ b/source/web/algemeen/danshouding.html
@@ -1,16 +1,16 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danshouding.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danshouding.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
-<div class="pull-right hidden-print dw-toc-affix" data-spy="affix" data-offset-top="150"><!-- TOC START -->
-<nav id="dokuwiki__toc" class="panel panel-default" role="navigation">
-<div class="panel-heading"><h3 class="panel-title open" data-toggle="collapse" data-target="#dokuwiki__toc .panel-collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
+<div class="pull-right hidden-print dw-toc-affix" data-offset-top="150" data-spy="affix"><!-- TOC START -->
+<nav class="panel panel-default" id="dokuwiki__toc" role="navigation">
+<div class="panel-heading"><h3 class="panel-title open" data-target="#dokuwiki__toc .panel-collapse" data-toggle="collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
 <div class="panel-collapse collapse in">
 <div class="panel-body">
 
@@ -61,7 +61,7 @@ De linkerhand van de dame ligt in beginsel op de bovenarm/schouder van haar dans
 </p>
 
 <p>
-De schouders van de heer en de dame zijn parallel aan elkaar. Ieder heeft z&#039;n voeten ongeveer op heupbreedte, recht naast elkaar, en beide danspartners hebben hun rechtervoet (ongeveer een halve voetlengte) tussen de voeten van de ander staan.
+De schouders van de heer en de dame zijn parallel aan elkaar. Ieder heeft z'n voeten ongeveer op heupbreedte, recht naast elkaar, en beide danspartners hebben hun rechtervoet (ongeveer een halve voetlengte) tussen de voeten van de ander staan.
 </p>
 
 <p>
@@ -95,7 +95,7 @@ Open houding, hier moet nog een omschrijving voor komen.
 <h4 class="sectionedit4" id="aanwijzingen">Aanwijzingen</h4>
 <div class="level4">
 <ul>
-<li class="level1"><div class="li">Om samen te kunnen draaien in een koppeldans, is het belangrijk dat de dame licht leunt in de rechterarm van de heer. Daardoor vorm je als koppel 1 geheel en krijg je een gezamelijk zwaarte-/draaipunt. De dame moet hiervoor durven te leunen, maar de heer moet ook het vertrouwen geven dat nodig is om te durven leunen. Dit is een subtiele balans tussen tegendruk geven en tegelijkertijd laten vieren. Oefen dit vooral eens &#039;droog&#039;, en durf tegen elkaar te zeggen hoe het voelt of hoe het anders zou kunnen.</div>
+<li class="level1"><div class="li">Om samen te kunnen draaien in een koppeldans, is het belangrijk dat de dame licht leunt in de rechterarm van de heer. Daardoor vorm je als koppel 1 geheel en krijg je een gezamelijk zwaarte-/draaipunt. De dame moet hiervoor durven te leunen, maar de heer moet ook het vertrouwen geven dat nodig is om te durven leunen. Dit is een subtiele balans tussen tegendruk geven en tegelijkertijd laten vieren. Oefen dit vooral eens 'droog', en durf tegen elkaar te zeggen hoe het voelt of hoe het anders zou kunnen.</div>
 </li>
 <li class="level1"><div class="li">De dame leunt als het ware als een plank naar achter, in de arm van de heer. dus niet met een holle rug, als een hoepeltje achterover, maar ook niet door je kont naar achter te steken.</div>
 </li>
@@ -108,7 +108,8 @@ Open houding, hier moet nog een omschrijving voor komen.
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
