--- a/source/web/algemeen/links.html
+++ b/source/web/algemeen/links.html
@@ -1,10 +1,10 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕links.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕links.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
@@ -16,17 +16,17 @@
 Op deze pagina een overzicht van links die te maken hebben met balfolk en dansen. Vul hier gerust relevante links toe.
 </p>
 <ul>
-<li class="level1"><div class="li"><a href="http://www.balfolk.nl/" class="urlextern" title="http://www.balfolk.nl" rel="nofollow">www.balfolk.nl</a> is de algemene nationale website voor (bijna) alles gerelateerd aan balfolk. Je vindt hier o.a. data van alle evenementen qua bals en lessen.</div>
+<li class="level1"><div class="li"><a class="urlextern" href="http://www.balfolk.nl/" rel="nofollow" title="http://www.balfolk.nl">www.balfolk.nl</a> is de algemene nationale website voor (bijna) alles gerelateerd aan balfolk. Je vindt hier o.a. data van alle evenementen qua bals en lessen.</div>
 </li>
-<li class="level1"><div class="li"><a href="http://www.youtube.com/channel/UCF_SgwKR8ILbYXHir_Lzjwg" class="urlextern" title="http://www.youtube.com/channel/UCF_SgwKR8ILbYXHir_Lzjwg" rel="nofollow">www.youtube.com/channel/UCF_SgwKR8ILbYXHir_Lzjwg</a> Het youtube kanaal van balfolk.nl met o.a. het een en ander aan instructiefilmpjes.</div>
+<li class="level1"><div class="li"><a class="urlextern" href="http://www.youtube.com/channel/UCF_SgwKR8ILbYXHir_Lzjwg" rel="nofollow" title="http://www.youtube.com/channel/UCF_SgwKR8ILbYXHir_Lzjwg">www.youtube.com/channel/UCF_SgwKR8ILbYXHir_Lzjwg</a> Het youtube kanaal van balfolk.nl met o.a. het een en ander aan instructiefilmpjes.</div>
 </li>
-<li class="level1"><div class="li"><a href="http://www.frissefolk.be/" class="urlextern" title="http://www.frissefolk.be" rel="nofollow">www.frissefolk.be</a> is de meest centrale Belgische website over balfolk in België waarop van alles te vinden is over bals en lessen.</div>
+<li class="level1"><div class="li"><a class="urlextern" href="http://www.frissefolk.be/" rel="nofollow" title="http://www.frissefolk.be">www.frissefolk.be</a> is de meest centrale Belgische website over balfolk in België waarop van alles te vinden is over bals en lessen.</div>
 </li>
-<li class="level1"><div class="li"><a href="http://mota.spansen.nl/" class="urlextern" title="http://mota.spansen.nl/" rel="nofollow">mota.spansen.nl</a> is een gezellig forum waarop al jaren van alles rondom balfolk dansen en muziek besproken wordt.</div>
+<li class="level1"><div class="li"><a class="urlextern" href="http://mota.spansen.nl/" rel="nofollow" title="http://mota.spansen.nl/">mota.spansen.nl</a> is een gezellig forum waarop al jaren van alles rondom balfolk dansen en muziek besproken wordt.</div>
 </li>
-<li class="level1"><div class="li"><a href="" class="urlextern" title="http://www.balfolkenschede.nl" rel="nofollow">www.balfolkenschede.nl</a> is de website van de Enschedese balfolk organisatie die ook de DansWiki hosten.</div>
+<li class="level1"><div class="li"><a class="urlextern" href="" rel="nofollow" title="http://www.balfolkenschede.nl">www.balfolkenschede.nl</a> is de website van de Enschedese balfolk organisatie die ook de DansWiki hosten.</div>
 </li>
-<li class="level1"><div class="li"><a href="http://www.folkroddels.be/" class="urlextern" title="http://www.folkroddels.be" rel="nofollow">www.folkroddels.be</a> is een Belgische website waar van alles over folkmuziek te vinden is.</div>
+<li class="level1"><div class="li"><a class="urlextern" href="http://www.folkroddels.be/" rel="nofollow" title="http://www.folkroddels.be">www.folkroddels.be</a> is een Belgische website waar van alles over folkmuziek te vinden is.</div>
 </li>
 </ul>
 
@@ -35,16 +35,17 @@ Op deze pagina een overzicht van links die te maken hebben met balfolk en dansen
 <h4 class="sectionedit2" id="dansen_algemeen">Dansen algemeen</h4>
 <div class="level4">
 <ul>
-<li class="level1"><div class="li"><a href="dansanterfgoed.blogspot.com" class="urlextern" title="http://dansanterfgoed.blogspot.com" rel="nofollow">Dans&#039;ant erfgoed blog oud</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="dansanterfgoed.blogspot.com" rel="nofollow" title="http://dansanterfgoed.blogspot.com">Dans'ant erfgoed blog oud</a></div>
 </li>
-<li class="level1"><div class="li"><a href="" class="urlextern" title="http://dansant.org/" rel="nofollow">Dans&#039;ant erfgoed blog nieuw</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="" rel="nofollow" title="http://dansant.org/">Dans'ant erfgoed blog nieuw</a></div>
 </li>
 </ul>
 
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
