--- a/source/web/algemeen/nieuws.html
+++ b/source/web/algemeen/nieuws.html
@@ -1,10 +1,10 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕nieuws.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕nieuws.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
@@ -16,13 +16,13 @@
 Op deze pagina worden nieuwsberichten over de danswiki toegevoegd:
 </p>
 <ul>
-<li class="level1"><div class="li">8-7-2016 - De talkpage plugin is gedeactiveerd aangezien de nieuwe DokuWiki (Bootstrap) nu zelf Discussion pagina&#039;s ondersteunt met een handiger linkje. </div>
+<li class="level1"><div class="li">8-7-2016 - De talkpage plugin is gedeactiveerd aangezien de nieuwe DokuWiki (Bootstrap) nu zelf Discussion pagina's ondersteunt met een handiger linkje. </div>
 </li>
 <li class="level1"><div class="li">8-7-2016 - DokuWiki van de DansWiki is geupdate naar de laatste versie samen met alle plugins.</div>
 </li>
 <li class="level1"><div class="li">6-4-2016 - De hele voormalige DansWiki van de Gonnagles is opgenomen in de huidige DansWiki voor zover het nog terug te halen was.</div>
 </li>
-<li class="level1"><div class="li">6-4-2016 - De DansWiki werkt vanaf nu onder het domein van <a href="" class="urlextern" title="" rel="nofollow">Balfolk Enschede</a>.</div>
+<li class="level1"><div class="li">6-4-2016 - De DansWiki werkt vanaf nu onder het domein van <a class="urlextern" href="" rel="nofollow" title="">Balfolk Enschede</a>.</div>
 </li>
 <li class="level1"><div class="li">16-3-2016 - Ondersteuning voor meertaligheid is toegevoegd.</div>
 </li>
@@ -33,7 +33,8 @@ Op deze pagina worden nieuwsberichten over de danswiki toegevoegd:
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
