--- a/source/web/dansen/bourree_du_berry.html
+++ b/source/web/dansen/bourree_du_berry.html
@@ -1,16 +1,16 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕kadootjesbourree.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕kadootjesbourree.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
-<div class="pull-right hidden-print dw-toc-affix" data-spy="affix" data-offset-top="150"><!-- TOC START -->
-<nav id="dokuwiki__toc" class="panel panel-default" role="navigation">
-<div class="panel-heading"><h3 class="panel-title open" data-toggle="collapse" data-target="#dokuwiki__toc .panel-collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
+<div class="pull-right hidden-print dw-toc-affix" data-offset-top="150" data-spy="affix"><!-- TOC START -->
+<nav class="panel panel-default" id="dokuwiki__toc" role="navigation">
+<div class="panel-heading"><h3 class="panel-title open" data-target="#dokuwiki__toc .panel-collapse" data-toggle="collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
 <div class="panel-collapse collapse in">
 <div class="panel-body">
 
@@ -24,7 +24,7 @@
 </ul>
 </li>
 <li class="level3"><a href="#instructiefilmpjes">Instructiefilmpjes</a></li>
-<li class="level3"><a href="#externe_pagina_s">Externe pagina&#039;s</a></li>
+<li class="level3"><a href="#externe_pagina_s">Externe pagina's</a></li>
 </ul>
 
 </div>
@@ -137,19 +137,19 @@ De dans bestaat verder uit een A- en een B-deel:
 </li>
 </ul>
 </li>
-<li class="level1"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕bourree_en_cercle.html" class="wikilink1" title="nl:dansen:bourree_du_berry:bourree_en_cercle">Bourree en cercle</a></div>
+<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕bourree_en_cercle.html" title="nl:dansen:bourree_du_berry:bourree_en_cercle">Bourree en cercle</a></div>
 </li>
-<li class="level1"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕bourree_des_jeunes.html" class="wikilink2" title="nl:dansen:bourree_du_berry:bourree_des_jeunes" rel="nofollow">Bourree des Jeunes</a></div>
+<li class="level1"><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕bourree_des_jeunes.html" rel="nofollow" title="nl:dansen:bourree_du_berry:bourree_des_jeunes">Bourree des Jeunes</a></div>
 </li>
-<li class="level1"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕bourree_croisee.html" class="wikilink2" title="nl:dansen:bourree_du_berry:bourree_croise" rel="nofollow">Bourree croisé</a></div>
+<li class="level1"><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕bourree_croisee.html" rel="nofollow" title="nl:dansen:bourree_du_berry:bourree_croise">Bourree croisé</a></div>
 </li>
-<li class="level1"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕kadootjesbourree.html" class="wikilink2" title="nl:dansen:bourree_du_berry:bourree_carre" rel="nofollow">Bourree carré</a></div>
+<li class="level1"><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕kadootjesbourree.html" rel="nofollow" title="nl:dansen:bourree_du_berry:bourree_carre">Bourree carré</a></div>
 </li>
-<li class="level1"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕la_grande_potterie.html" class="wikilink1" title="nl:dansen:bourree_du_berry:la_grande_potterie">La grande potterie</a></div>
+<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕la_grande_potterie.html" title="nl:dansen:bourree_du_berry:la_grande_potterie">La grande potterie</a></div>
 </li>
-<li class="level1"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕bourree_valse_d_issoudun.html" class="wikilink1" title="nl:dansen:bourree_du_berry:bourree_valse_d_issoudun">Bourree valsé d&#039;Issoudun</a></div>
+<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕bourree_valse_d_issoudun.html" title="nl:dansen:bourree_du_berry:bourree_valse_d_issoudun">Bourree valsé d'Issoudun</a></div>
 </li>
-<li class="level1"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕kadootjesbourree.html" class="wikilink2" title="nl:dansen:bourree_du_berry:kadootjesbourree" rel="nofollow">Kadootjesbourree</a></div>
+<li class="level1"><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕kadootjesbourree.html" rel="nofollow" title="nl:dansen:bourree_du_berry:kadootjesbourree">Kadootjesbourree</a></div>
 </li>
 <li class="level1"><div class="li">(Vul maar aan) </div>
 </li>
@@ -163,30 +163,31 @@ De dans bestaat verder uit een A- en een B-deel:
 <li class="level1"><div class="li">Le pas de bourrée à 2 temps</div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/0lN6jjY7RqU" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe><ul>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/0lN6jjY7RqU" width="425"></iframe><ul>
 <li class="level1"><div class="li">Bourrée 2 temps - video notes </div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/yDCbfE0p3" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/yDCbfE0p3" width="425"></iframe>
 </div>
 
-<h3 class="sectionedit7" id="externe_pagina_s">Externe pagina&#039;s</h3>
+<h3 class="sectionedit7" id="externe_pagina_s">Externe pagina's</h3>
 <div class="level3">
 <ul>
-<li class="level1"><div class="li"><a href="BFdances.html#bourree" class="urlextern" title="http://celticbompa.4t.com/BFdances.html#bourree" rel="nofollow">Celtic Bompa Bourree</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="BFdances.html#bourree" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#bourree">Celtic Bompa Bourree</a></div>
 </li>
-<li class="level1"><div class="li"><a href="Bourree.html#head" class="urlextern" title="http://celticbompa.4t.com/Bourree.html#head" rel="nofollow">Celtic Bompa Bourree Workshop-aantekeningen</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="Bourree.html#head" rel="nofollow" title="http://celticbompa.4t.com/Bourree.html#head">Celtic Bompa Bourree Workshop-aantekeningen</a></div>
 </li>
-<li class="level1"><div class="li"><a href="Wattrelos20040131.html#bourree" class="urlextern" title="http://celticbompa.4t.com/Wattrelos20040131.html#bourree" rel="nofollow">Celtic Bompa Bourree-filmpjes</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="Wattrelos20040131.html#bourree" rel="nofollow" title="http://celticbompa.4t.com/Wattrelos20040131.html#bourree">Celtic Bompa Bourree-filmpjes</a></div>
 </li>
-<li class="level1"><div class="li"><a href="http://www.folkroddels.be/artikels/1885.html" class="urlextern" title="http://www.folkroddels.be/artikels/1885.html" rel="nofollow">Folkroddels.be: Naar een bourree met stijl</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="http://www.folkroddels.be/artikels/1885.html" rel="nofollow" title="http://www.folkroddels.be/artikels/1885.html">Folkroddels.be: Naar een bourree met stijl</a></div>
 </li>
 </ul>
 
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
