--- a/source/web/dansen/bourree_du_berry_bourree_valse_d_issoudun.html
+++ b/source/web/dansen/bourree_du_berry_bourree_valse_d_issoudun.html
@@ -1,15 +1,15 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕bourree_valse_d_issoudun.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕bourree_valse_d_issoudun.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
 <div class="dw-content">
-<h3 class="sectionedit1" id="bourree_valse_d_issoudun">Bourrée valsé d&#039;Issoudun</h3>
+<h3 class="sectionedit1" id="bourree_valse_d_issoudun">Bourrée valsé d'Issoudun</h3>
 <div class="level3">
 
 <p>
@@ -19,11 +19,12 @@ Het A deel wordt gedanst als gewone bourrée, in paren, met een wisseling van pl
 <p>
 Kijk maar:
 </p>
-<iframe src="https://www.youtube.com/embed/nvwPnfwSpvU" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/nvwPnfwSpvU" width="425"></iframe>
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
