--- a/source/web/dansen/polka.html
+++ b/source/web/dansen/polka.html
@@ -1,16 +1,16 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polka.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polka.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
-<div class="pull-right hidden-print dw-toc-affix" data-spy="affix" data-offset-top="150"><!-- TOC START -->
-<nav id="dokuwiki__toc" class="panel panel-default" role="navigation">
-<div class="panel-heading"><h3 class="panel-title open" data-toggle="collapse" data-target="#dokuwiki__toc .panel-collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
+<div class="pull-right hidden-print dw-toc-affix" data-offset-top="150" data-spy="affix"><!-- TOC START -->
+<nav class="panel panel-default" id="dokuwiki__toc" role="navigation">
+<div class="panel-heading"><h3 class="panel-title open" data-target="#dokuwiki__toc .panel-collapse" data-toggle="collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
 <div class="panel-collapse collapse in">
 <div class="panel-body">
 
@@ -24,7 +24,7 @@
 </ul>
 </li>
 <li class="level3"><a href="#voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</a></li>
-<li class="level3"><a href="#externe_pagina_s">Externe Pagina&#039;s</a></li>
+<li class="level3"><a href="#externe_pagina_s">Externe Pagina's</a></li>
 </ul>
 
 </div>
@@ -45,7 +45,7 @@ Springerige parendans
 <div class="level4">
 
 <p>
-Met z&#039;n tweeën in half-open houding op een leeg plekje op de dansvloer.
+Met z'n tweeën in half-open houding op een leeg plekje op de dansvloer.
 </p>
 
 </div>
@@ -54,7 +54,7 @@ Met z&#039;n tweeën in half-open houding op een leeg plekje op de dansvloer.
 <div class="level4">
 
 <p>
-Vrouw begint naar rechts, man naar links: 123 ter plaatse aan de ene kant, 123 ter plaatse aan de andere kant (op 1 kom je neer, op 2 veer je na, op 3 maak je je klaar voor een sprongetje).  Onderwijl kun je ronddraaien, waardoor je tegen de klok in gaat op de dansvloer. Na 4 maten kun je bijvoorbeeld 4 keer dezelfde kant op &#039;hupsen&#039; zonder te draaien, dan wel draaien en weer 4 keer dezelfde kant op &#039;hupsen&#039;.
+Vrouw begint naar rechts, man naar links: 123 ter plaatse aan de ene kant, 123 ter plaatse aan de andere kant (op 1 kom je neer, op 2 veer je na, op 3 maak je je klaar voor een sprongetje).  Onderwijl kun je ronddraaien, waardoor je tegen de klok in gaat op de dansvloer. Na 4 maten kun je bijvoorbeeld 4 keer dezelfde kant op 'hupsen' zonder te draaien, dan wel draaien en weer 4 keer dezelfde kant op 'hupsen'.
 </p>
 
 </div>
@@ -88,27 +88,28 @@ Heel veel, wees crea! Een kort lijstje:
 <h3 class="sectionedit6" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
 <div class="level3">
 <ul>
-<li class="level1"><div class="li"><a href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/269" class="urlextern" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/269" rel="nofollow">Bladmuziek Polka van Wim</a> (PDF en midi)   </div>
+<li class="level1"><div class="li"><a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/269" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/269">Bladmuziek Polka van Wim</a> (PDF en midi)   </div>
 </li>
-<li class="level1"><div class="li"><a href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/269" class="urlextern" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/269" rel="nofollow">Opname Polka van Wim</a>: </div>
+<li class="level1"><div class="li"><a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/269" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/269">Opname Polka van Wim</a>: </div>
 </li>
 </ul>
 
 </div>
 
-<h3 class="sectionedit7" id="externe_pagina_s">Externe Pagina&#039;s</h3>
+<h3 class="sectionedit7" id="externe_pagina_s">Externe Pagina's</h3>
 <div class="level3">
 <ul>
-<li class="level1"><div class="li"><a href="BFdances.html#polka" class="urlextern" title="http://celticbompa.4t.com/BFdances.html#polka" rel="nofollow">Celtic Bompa Polka</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="BFdances.html#polka" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#polka">Celtic Bompa Polka</a></div>
 </li>
-<li class="level1"><div class="li"><a href="http://www.folkroddels.be/artikels/3471.html" class="urlextern" title="http://www.folkroddels.be/artikels/3471.html" rel="nofollow">Folkroddels.be: Juffrouw wil jij de polka leren</a> </div>
+<li class="level1"><div class="li"><a class="urlextern" href="http://www.folkroddels.be/artikels/3471.html" rel="nofollow" title="http://www.folkroddels.be/artikels/3471.html">Folkroddels.be: Juffrouw wil jij de polka leren</a> </div>
 </li>
 </ul>
 
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
