--- a/source/web/dansen/polska.html
+++ b/source/web/dansen/polska.html
@@ -1,16 +1,16 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕slaengpolska.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕slaengpolska.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
-<div class="pull-right hidden-print dw-toc-affix" data-spy="affix" data-offset-top="150"><!-- TOC START -->
-<nav id="dokuwiki__toc" class="panel panel-default" role="navigation">
-<div class="panel-heading"><h3 class="panel-title open" data-toggle="collapse" data-target="#dokuwiki__toc .panel-collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
+<div class="pull-right hidden-print dw-toc-affix" data-offset-top="150" data-spy="affix"><!-- TOC START -->
+<nav class="panel panel-default" id="dokuwiki__toc" role="navigation">
+<div class="panel-heading"><h3 class="panel-title open" data-target="#dokuwiki__toc .panel-collapse" data-toggle="collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
 <div class="panel-collapse collapse in">
 <div class="panel-body">
 
@@ -29,7 +29,7 @@
 </ul>
 </li>
 <li class="level3"><a href="#voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</a></li>
-<li class="level3"><a href="#externe_pagina_s">Externe Pagina&#039;s</a></li>
+<li class="level3"><a href="#externe_pagina_s">Externe Pagina's</a></li>
 </ul>
 
 </div>
@@ -111,16 +111,16 @@ Bij bakmes draai je linksom in plaats van rechtsom. (Betere uitleg gewenst.)
 </p>
 
 <p>
-Andere vormen van polska&#039;s of afgeleiden hiervan (op basis van muziek en/of de dans) zijn:
+Andere vormen van polska's of afgeleiden hiervan (op basis van muziek en/of de dans) zijn:
 </p>
 <ul>
-<li class="level1"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕boda.html" class="wikilink2" title="nl:dansen:polska:boda" rel="nofollow">Boda</a></div>
+<li class="level1"><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕boda.html" rel="nofollow" title="nl:dansen:polska:boda">Boda</a></div>
 </li>
-<li class="level1"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕springlek.html" class="wikilink2" title="nl:dansen:polska:springlek" rel="nofollow">Springlek</a></div>
+<li class="level1"><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕springlek.html" rel="nofollow" title="nl:dansen:polska:springlek">Springlek</a></div>
 </li>
-<li class="level1"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕slaengpolska.html" class="wikilink2" title="nl:dansen:polska:slaengpolska" rel="nofollow">Slängpolska</a></div>
+<li class="level1"><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕slaengpolska.html" rel="nofollow" title="nl:dansen:polska:slaengpolska">Slängpolska</a></div>
 </li>
-<li class="level1"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕slaengpolska.html" class="wikilink2" title="nl:dansen:polska:finnskogpols" rel="nofollow">Finnskogpols</a></div>
+<li class="level1"><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕slaengpolska.html" rel="nofollow" title="nl:dansen:polska:finnskogpols">Finnskogpols</a></div>
 </li>
 </ul>
 
@@ -128,20 +128,21 @@ Andere vormen van polska&#039;s of afgeleiden hiervan (op basis van muziek en/of
 
 <h3 class="sectionedit7" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
 <div class="level3">
-<iframe src="https://www.youtube.com/embed/Cx1qx288lZI" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/Cx1qx288lZI" width="425"></iframe>
 </div>
 
-<h3 class="sectionedit8" id="externe_pagina_s">Externe Pagina&#039;s</h3>
+<h3 class="sectionedit8" id="externe_pagina_s">Externe Pagina's</h3>
 <div class="level3">
 <ul>
-<li class="level1"><div class="li"><a href="BFdances.html#polska" class="urlextern" title="http://celticbompa.4t.com/BFdances.html#polska" rel="nofollow">Celtic Bompa Polksa</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="BFdances.html#polska" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#polska">Celtic Bompa Polksa</a></div>
 </li>
 </ul>
 
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
