--- a/source/web/dansen/scottisch.html
+++ b/source/web/dansen/scottisch.html
@@ -1,16 +1,16 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕scottisch.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕scottisch.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
-<div class="pull-right hidden-print dw-toc-affix" data-spy="affix" data-offset-top="150"><!-- TOC START -->
-<nav id="dokuwiki__toc" class="panel panel-default" role="navigation">
-<div class="panel-heading"><h3 class="panel-title open" data-toggle="collapse" data-target="#dokuwiki__toc .panel-collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
+<div class="pull-right hidden-print dw-toc-affix" data-offset-top="150" data-spy="affix"><!-- TOC START -->
+<nav class="panel panel-default" id="dokuwiki__toc" role="navigation">
+<div class="panel-heading"><h3 class="panel-title open" data-target="#dokuwiki__toc .panel-collapse" data-toggle="collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
 <div class="panel-collapse collapse in">
 <div class="panel-body">
 
@@ -23,7 +23,7 @@
 </ul>
 </li>
 <li class="level3"><a href="#voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</a></li>
-<li class="level3"><a href="#externe_pagina_s">Externe Pagina&#039;s</a></li>
+<li class="level3"><a href="#externe_pagina_s">Externe Pagina's</a></li>
 </ul>
 
 </div>
@@ -75,7 +75,7 @@ Gewoon in paren, half-open houding, over de dansvloer heen
 </li>
 <li class="level1"><div class="li">Omsluiten, elkaar los laten en in het A deel (dus 6 stappen) om een paar heen lopen (allebei een kant), B deel weer vrolijk samen verder dansen.</div>
 </li>
-<li class="level1"><div class="li">Hele figuur zijwaarts: het tweede deel van A gaat dus binnendoor en deel B is een soort &#039;naast elkaar lopen&#039;, zo kan ook wat afstand worden afgelegd naar een rustig plekje op de dansvloer.</div>
+<li class="level1"><div class="li">Hele figuur zijwaarts: het tweede deel van A gaat dus binnendoor en deel B is een soort 'naast elkaar lopen', zo kan ook wat afstand worden afgelegd naar een rustig plekje op de dansvloer.</div>
 </li>
 <li class="level1"><div class="li">Op deel A uit elkaar gaan en gestrekte armen vastpakken en weer naar binnen gaan naar: danshouding, of handen vast voor het hart, of indraaien (dame onder de linkerarm van de heer door). Hier een tijdje in dansen, dan de dame met een kort rukje aan haar linkerarm uit laten draaien op deel B.</div>
 </li>
@@ -88,47 +88,48 @@ Gewoon in paren, half-open houding, over de dansvloer heen
 <h3 class="sectionedit5" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
 <div class="level3">
 <ul>
-<li class="level1"><div class="li">Bladmuziek <a href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/276" class="urlextern" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/276" rel="nofollow">Le Canal en Octobre</a>:   </div>
+<li class="level1"><div class="li">Bladmuziek <a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/276" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/276">Le Canal en Octobre</a>:   </div>
 </li>
-<li class="level1"><div class="li">Opname <a href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/276" class="urlextern" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/276" rel="nofollow">Le Canal en Octobre</a>: </div>
+<li class="level1"><div class="li">Opname <a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/276" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/276">Le Canal en Octobre</a>: </div>
 </li>
 </ul>
 <ul>
 <li class="level1"><div class="li">Scottish instructie</div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/y1mfTqRCfyg" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe><ul>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/y1mfTqRCfyg" width="425"></iframe><ul>
 <li class="level1"><div class="li">Wen en Cryssie </div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/aZZTY6soclM" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe><ul>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/aZZTY6soclM" width="425"></iframe><ul>
 <li class="level1"><div class="li">Chananja en Cecilia </div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/nr-1u0VwLRU" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/nr-1u0VwLRU" width="425"></iframe>
 <p>
 (Filmpje gemaakt door Iris) 
 </p>
 
 </div>
 
-<h3 class="sectionedit6" id="externe_pagina_s">Externe Pagina&#039;s</h3>
+<h3 class="sectionedit6" id="externe_pagina_s">Externe Pagina's</h3>
 <div class="level3">
 <ul>
-<li class="level1"><div class="li"><a href="" class="urlextern" title="http://www.folkforum.nl/content/view/2095/158/" rel="nofollow">Basisuitleg op folkforum, door Cooper</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="" rel="nofollow" title="http://www.folkforum.nl/content/view/2095/158/">Basisuitleg op folkforum, door Cooper</a></div>
 </li>
-<li class="level1"><div class="li"><a href="BFdances.html#scottish" class="urlextern" title="http://celticbompa.4t.com/BFdances.html#scottish" rel="nofollow">Celtic Bompa Scottish</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="BFdances.html#scottish" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#scottish">Celtic Bompa Scottish</a></div>
 </li>
-<li class="level1"><div class="li"><a href="Wattrelos20040131.html#scottish" class="urlextern" title="http://celticbompa.4t.com/Wattrelos20040131.html#scottish" rel="nofollow">Celtic Bompa workshop door Bernard Coclet aantekeningen</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="Wattrelos20040131.html#scottish" rel="nofollow" title="http://celticbompa.4t.com/Wattrelos20040131.html#scottish">Celtic Bompa workshop door Bernard Coclet aantekeningen</a></div>
 </li>
-<li class="level1"><div class="li"><a href="http://www.folkroddels.be/artikels/1770.html" class="urlextern" title="http://www.folkroddels.be/artikels/1770.html" rel="nofollow">Folkroddels.be: Scottish voor fijnproevers</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="http://www.folkroddels.be/artikels/1770.html" rel="nofollow" title="http://www.folkroddels.be/artikels/1770.html">Folkroddels.be: Scottish voor fijnproevers</a></div>
 </li>
 </ul>
 
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
