--- a/source/web/dansen/wals/wals.html
+++ b/source/web/dansen/wals/wals.html
@@ -1,16 +1,16 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_14_tijden.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_14_tijden.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
-<div class="pull-right hidden-print dw-toc-affix" data-spy="affix" data-offset-top="150"><!-- TOC START -->
-<nav id="dokuwiki__toc" class="panel panel-default" role="navigation">
-<div class="panel-heading"><h3 class="panel-title open" data-toggle="collapse" data-target="#dokuwiki__toc .panel-collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
+<div class="pull-right hidden-print dw-toc-affix" data-offset-top="150" data-spy="affix"><!-- TOC START -->
+<nav class="panel panel-default" id="dokuwiki__toc" role="navigation">
+<div class="panel-heading"><h3 class="panel-title open" data-target="#dokuwiki__toc .panel-collapse" data-toggle="collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
 <div class="panel-collapse collapse in">
 <div class="panel-body">
 
@@ -20,7 +20,7 @@
 <li class="level4"><a href="#aanwijzingen">Aanwijzingen</a></li>
 <li class="level4"><a href="#variaties">Variaties</a></li>
 <li class="level3"><a href="#voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</a></li>
-<li class="level3"><a href="#externe_pagina_s">Externe Pagina&#039;s</a></li>
+<li class="level3"><a href="#externe_pagina_s">Externe Pagina's</a></li>
 </ul>
 
 </div>
@@ -82,15 +82,15 @@ Je staat in half-open houding, ergens op de dansvloer. De paren die snel willen 
 <h4 class="sectionedit4" id="variaties">Variaties</h4>
 <div class="level4">
 <ul>
-<li class="level1"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_5_tijden.html" class="wikilink1" title="nl:dansen:wals:wals_in_5_tijden">Wals in 5 tijden</a></div>
+<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_5_tijden.html" title="nl:dansen:wals:wals_in_5_tijden">Wals in 5 tijden</a></div>
 </li>
-<li class="level1"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_7_tijden.html" class="wikilink1" title="nl:dansen:wals:wals_in_7_tijden">Wals in 7 tijden</a></div>
+<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_7_tijden.html" title="nl:dansen:wals:wals_in_7_tijden">Wals in 7 tijden</a></div>
 </li>
-<li class="level1"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_8_tijden.html" class="wikilink1" title="nl:dansen:wals:wals_in_8_tijden">Wals in 8 tijden</a></div>
+<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_8_tijden.html" title="nl:dansen:wals:wals_in_8_tijden">Wals in 8 tijden</a></div>
 </li>
-<li class="level1"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_11_tijden.html" class="wikilink1" title="nl:dansen:wals:wals_in_11_tijden">Wals in 11 tijden</a></div>
+<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_11_tijden.html" title="nl:dansen:wals:wals_in_11_tijden">Wals in 11 tijden</a></div>
 </li>
-<li class="level1"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_14_tijden.html" class="wikilink1" title="nl:dansen:wals:wals_in_14_tijden">Wals in 14 tijden</a></div>
+<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_14_tijden.html" title="nl:dansen:wals:wals_in_14_tijden">Wals in 14 tijden</a></div>
 </li>
 </ul>
 
@@ -100,40 +100,41 @@ Je staat in half-open houding, ergens op de dansvloer. De paren die snel willen 
 <div class="level3">
 <ul>
 
-</li>
+
 </ul>
-<iframe src="https://www.youtube.com/embed/honwsw_O-W" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe><ul>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/honwsw_O-W" width="425"></iframe><ul>
 <li class="level1"><div class="li">Depardu (Eric Theze en Wouter Vandenabeele)</div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/1MWgBDObNgg" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe><ul>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/1MWgBDObNgg" width="425"></iframe><ul>
 <li class="level1"><div class="li">Wals in 3</div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/hBnAgW9KOqg" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe><ul>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/hBnAgW9KOqg" width="425"></iframe><ul>
 <li class="level1"><div class="li">Ander soort wals (choreografie?) met een Fransman die laatst ook in muiderpoort was</div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/LeuklHmIhMU" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe><ul>
-<li class="level1"><div class="li">Filmpje van een workshop: Bal de l&#039;Europe 2008 “LA VALSE des BRAS” </div>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/LeuklHmIhMU" width="425"></iframe><ul>
+<li class="level1"><div class="li">Filmpje van een workshop: Bal de l'Europe 2008 “LA VALSE des BRAS” </div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/QN8XqDbfbps" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/QN8XqDbfbps" width="425"></iframe>
 </div>
 
-<h3 class="sectionedit6" id="externe_pagina_s">Externe Pagina&#039;s</h3>
+<h3 class="sectionedit6" id="externe_pagina_s">Externe Pagina's</h3>
 <div class="level3">
 <ul>
-<li class="level1"><div class="li"><a href="BFdances.html#5stepwaltz" class="urlextern" title="http://celticbompa.4t.com/BFdances.html#5stepwaltz" rel="nofollow">Celtic Bompa 5-Step Waltz</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="BFdances.html#5stepwaltz" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#5stepwaltz">Celtic Bompa 5-Step Waltz</a></div>
 </li>
-<li class="level1"><div class="li"><a href="Zwiebo.html#zwiefacher" class="urlextern" title="http://celticbompa.4t.com/Zwiebo.html#zwiefacher" rel="nofollow">Celtic Bompa aantekeningen zwiefacher workshop</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="Zwiebo.html#zwiefacher" rel="nofollow" title="http://celticbompa.4t.com/Zwiebo.html#zwiefacher">Celtic Bompa aantekeningen zwiefacher workshop</a></div>
 </li>
 </ul>
 
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
