--- a/source/web/dansen/wals/wals_in_14_tijden.html
+++ b/source/web/dansen/wals/wals_in_14_tijden.html
@@ -1,10 +1,10 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_14_tijden.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_14_tijden.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
@@ -25,20 +25,21 @@ Komt in het wild niet voor.
 2 Walsen in 14 tijden (32333) door Eric Theze:
 </p>
 <ul>
-<li class="level1"><div class="li"><a href="http://eric.theze.free.fr/musiques/vevy14tps.mp3" class="urlextern" title="http://eric.theze.free.fr/musiques/vevy14tps.mp3" rel="nofollow">Vévy</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="http://eric.theze.free.fr/musiques/vevy14tps.mp3" rel="nofollow" title="http://eric.theze.free.fr/musiques/vevy14tps.mp3">Vévy</a></div>
 </li>
-<li class="level1"><div class="li"><a href="http://eric.theze.free.fr/musiques/dessinslydia.mp3" class="urlextern" title="http://eric.theze.free.fr/musiques/dessinslydia.mp3" rel="nofollow">Dessins</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="http://eric.theze.free.fr/musiques/dessinslydia.mp3" rel="nofollow" title="http://eric.theze.free.fr/musiques/dessinslydia.mp3">Dessins</a></div>
 </li>
 </ul>
 
 <p>
-(bron: <a href="http://eric.theze.free.fr/scores.html" class="urlextern" title="http://eric.theze.free.fr/scores.html" rel="nofollow">http://eric.theze.free.fr/scores.html</a>) 
+(bron: <a class="urlextern" href="http://eric.theze.free.fr/scores.html" rel="nofollow" title="http://eric.theze.free.fr/scores.html">http://eric.theze.free.fr/scores.html</a>) 
 </p>
 
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
