--- a/source/web/events/dansstage.html
+++ b/source/web/events/dansstage.html
@@ -1,22 +1,22 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕event﹕dansstage.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕event﹕dansstage.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
-<div class="pull-right hidden-print dw-toc-affix" data-spy="affix" data-offset-top="150"><!-- TOC START -->
-<nav id="dokuwiki__toc" class="panel panel-default" role="navigation">
-<div class="panel-heading"><h3 class="panel-title open" data-toggle="collapse" data-target="#dokuwiki__toc .panel-collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
+<div class="pull-right hidden-print dw-toc-affix" data-offset-top="150" data-spy="affix"><!-- TOC START -->
+<nav class="panel panel-default" id="dokuwiki__toc" role="navigation">
+<div class="panel-heading"><h3 class="panel-title open" data-target="#dokuwiki__toc .panel-collapse" data-toggle="collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
 <div class="panel-collapse collapse in">
 <div class="panel-body">
 
 <ul class="nav nav-pills nav-stacked toc">
 <li class="level3"><a href="#dansstage">Dansstage</a></li>
-<li class="level3"><a href="#externe_pagina_s">Externe Pagina&#039;s</a>
+<li class="level3"><a href="#externe_pagina_s">Externe Pagina's</a>
 <ul class="nav nav-pills nav-stacked toc">
 <li class="level4"><a href="#referenties_en_bronnen">Referenties en bronnen</a></li>
 </ul></li>
@@ -39,15 +39,15 @@ Het evenement begint op vrijdagavond en eindigt zondagmiddag. Er wordt gezorgd v
 </p>
 
 <p>
-Het belangrijkste is echter de sfeer. Elk jaar voelen we ons dankbaar dat we dit evenement mogen delen met geweldige mensen en naast de fijne dansjes en heerlijke muziek, is het altijd weer een fijn weerzien. Als je niet het hele weekend kan, maar toch graag wilt genieten van de dansstage-sfeer, ben je van harte welkom om mee te dansen tijdens het bal op zaterdagavond. Dit bal is voor iedereen toegankelijk. <sup><a href="#refnotes:1:note1" name="refnotes:1:ref1" class="refnotes-ref note-popup">1)</a></sup>
+Het belangrijkste is echter de sfeer. Elk jaar voelen we ons dankbaar dat we dit evenement mogen delen met geweldige mensen en naast de fijne dansjes en heerlijke muziek, is het altijd weer een fijn weerzien. Als je niet het hele weekend kan, maar toch graag wilt genieten van de dansstage-sfeer, ben je van harte welkom om mee te dansen tijdens het bal op zaterdagavond. Dit bal is voor iedereen toegankelijk. <sup><a class="refnotes-ref note-popup" href="#refnotes:1:note1" name="refnotes:1:ref1">1)</a></sup>
 </p>
 
 </div>
 
-<h3 class="sectionedit2" id="externe_pagina_s">Externe Pagina&#039;s</h3>
+<h3 class="sectionedit2" id="externe_pagina_s">Externe Pagina's</h3>
 <div class="level3">
 <ul>
-<li class="level1"><div class="li"><a href="http://www.dansstage.nl/" class="urlextern" title="http://www.dansstage.nl/" rel="nofollow">Officiële website</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="http://www.dansstage.nl/" rel="nofollow" title="http://www.dansstage.nl/">Officiële website</a></div>
 </li>
 </ul>
 
@@ -56,12 +56,12 @@ Het belangrijkste is echter de sfeer. Elk jaar voelen we ons dankbaar dat we dit
 <h4 class="sectionedit3" id="referenties_en_bronnen">Referenties en bronnen</h4>
 <div class="level4">
 <div class="refnotes">
-<hr>
+<hr/>
 <div class="notes">
 <div class="note justify">
-<sup><b><a href="#refnotes:1:ref1" name="refnotes:1:note1" class="backref">1)</a></b></sup>
+<sup><b><a class="backref" href="#refnotes:1:ref1" name="refnotes:1:note1">1)</a></b></sup>
 <span id="refnotes:1:note1:text">
-<a href="http://www.dansstage.nl/nl_NL/" class="urlextern" title="http://www.dansstage.nl/nl_NL/" rel="nofollow">www.dansstage.nl/nl_NL</a>
+<a class="urlextern" href="http://www.dansstage.nl/nl_NL/" rel="nofollow" title="http://www.dansstage.nl/nl_NL/">www.dansstage.nl/nl_NL</a>
 </span></div>
 </div>
 </div>
@@ -69,7 +69,8 @@ Het belangrijkste is echter de sfeer. Elk jaar voelen we ons dankbaar dat we dit
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
