--- a/source/web/events/festival_a_3temps.html
+++ b/source/web/events/festival_a_3temps.html
@@ -1,4 +1,4 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
         <div class="panel panel-default">
           <div class="page panel-body">
@@ -39,16 +39,16 @@
           </li>
         </ul>
       </div>
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕event﹕festival_a_3temps.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕event﹕festival_a_3temps.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
 <div class="dw-content">
 <p>
-<a href="http://festival.3temps.com/nl/home/" class="urlextern" title="http://festival.3temps.com/nl/home/" rel="nofollow">Festifal a 3temps</a>
+<a class="urlextern" href="http://festival.3temps.com/nl/home/" rel="nofollow" title="http://festival.3temps.com/nl/home/">Festifal a 3temps</a>
 </p>
 
 </div>
@@ -56,3 +56,4 @@
         </div>
 
       </article>
+</body></html>
