--- a/source/web/events/parkfest.html
+++ b/source/web/events/parkfest.html
@@ -1,10 +1,10 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕event﹕parkfest.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕event﹕parkfest.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
@@ -17,7 +17,7 @@ Parkfest is een meerdaags festival voor folkmuziek uit Nederland, Vlaanderen, Fr
 </p>
 
 <p>
-In 2014 en 2015 werd Parkfest in het Philips de Jonghpark gehouden. In 2016 is het een indoor-evenement in het <a href="http://www.tac.nu/" class="urlextern" title="http://www.tac.nu/" rel="nofollow">Temporary Art Centre (TAC)</a> in Eindhoven. Overnachten kan in de slaapzaal en op een mini-camping voor de deur (in voorbereiding).
+In 2014 en 2015 werd Parkfest in het Philips de Jonghpark gehouden. In 2016 is het een indoor-evenement in het <a class="urlextern" href="http://www.tac.nu/" rel="nofollow" title="http://www.tac.nu/">Temporary Art Centre (TAC)</a> in Eindhoven. Overnachten kan in de slaapzaal en op een mini-camping voor de deur (in voorbereiding).
 </p>
 
 <p>
@@ -26,19 +26,20 @@ Parkfest is de opvolger van International Folk Festival “Folkwoods” dat van 
 
 </div>
 
-<h3 class="sectionedit2" id="externe_pagina_s">Externe Pagina&#039;s</h3>
+<h3 class="sectionedit2" id="externe_pagina_s">Externe Pagina's</h3>
 <div class="level3">
 <ul>
-<li class="level1"><div class="li"><a href="http://www.parkfest.nl/" class="urlextern" title="http://www.parkfest.nl/" rel="nofollow">Officiële website</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="http://www.parkfest.nl/" rel="nofollow" title="http://www.parkfest.nl/">Officiële website</a></div>
 </li>
-<li class="level1"><div class="li"><a href="https://www.facebook.com/parkfesteindhoven/" class="urlextern" title="https://www.facebook.com/parkfesteindhoven/" rel="nofollow">Officiële Facebookpagina</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="https://www.facebook.com/parkfesteindhoven/" rel="nofollow" title="https://www.facebook.com/parkfesteindhoven/">Officiële Facebookpagina</a></div>
 </li>
 </ul>
 
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
