--- a/source/web/muziek/bladmuziek/bladmuziek_databases.html
+++ b/source/web/muziek/bladmuziek/bladmuziek_databases.html
@@ -1,10 +1,10 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕muziek﹕bladmuziek﹕databases.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕muziek﹕bladmuziek﹕databases.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
@@ -16,22 +16,23 @@
 Hier staan links naar verscheidene databases met muziek.
 </p>
 <ul>
-<li class="level1"><div class="li"><a href="http://eric.theze.free.fr/scores.html" class="urlextern" title="http://eric.theze.free.fr/scores.html" rel="nofollow">Eric Thézé muziek</a>: Hier staat een grote hoeveelheid van Eric Thézé zijn bladmuziek. Veel is ook als audiobestand te downloaden.</div>
+<li class="level1"><div class="li"><a class="urlextern" href="http://eric.theze.free.fr/scores.html" rel="nofollow" title="http://eric.theze.free.fr/scores.html">Eric Thézé muziek</a>: Hier staat een grote hoeveelheid van Eric Thézé zijn bladmuziek. Veel is ook als audiobestand te downloaden.</div>
 </li>
-<li class="level1"><div class="li"><a href="http://www.diatonia.net/" class="urlextern" title="http://www.diatonia.net/" rel="nofollow">Diationia.net</a>: Hier staat bladmuziek van veel danssoorten en streken van een redelijke hoeveelheid artiesten. Waarschijnlijk is alles door iemand op gehoor uitgezocht en hier neergezet. Het is gericht op accordeon, maar natuurlijk ook geschikt voor andere instrumenten en bij alle bladmuziekbestanden zijn ook midibestanden aanwezig.</div>
+<li class="level1"><div class="li"><a class="urlextern" href="http://www.diatonia.net/" rel="nofollow" title="http://www.diatonia.net/">Diationia.net</a>: Hier staat bladmuziek van veel danssoorten en streken van een redelijke hoeveelheid artiesten. Waarschijnlijk is alles door iemand op gehoor uitgezocht en hier neergezet. Het is gericht op accordeon, maar natuurlijk ook geschikt voor andere instrumenten en bij alle bladmuziekbestanden zijn ook midibestanden aanwezig.</div>
 </li>
-<li class="level1"><div class="li"><a href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php" class="urlextern" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php" rel="nofollow">Gonnagles muziek database</a>: Hier staat van alles aan bladmuziek, opgenomen (voorbeeld-)deuntjes en midibestanden van de muziek. Er staan o.a. 3 complete (sessie-)tunebooks op.</div>
+<li class="level1"><div class="li"><a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php">Gonnagles muziek database</a>: Hier staat van alles aan bladmuziek, opgenomen (voorbeeld-)deuntjes en midibestanden van de muziek. Er staan o.a. 3 complete (sessie-)tunebooks op.</div>
 </li>
-<li class="level1"><div class="li"><a href="http://souslepont.org/?page=" class="urlextern" title="http://souslepont.org/?page=" rel="nofollow">Sous le Pont muziek</a>: Bladmuziek van de Franse band Sous le Pont.</div>
+<li class="level1"><div class="li"><a class="urlextern" href="http://souslepont.org/?page=" rel="nofollow" title="http://souslepont.org/?page=">Sous le Pont muziek</a>: Bladmuziek van de Franse band Sous le Pont.</div>
 </li>
-<li class="level1"><div class="li"><a href="http://www.sextetaclaques.fr/partitions" class="urlextern" title="http://www.sextetaclaques.fr/partitions" rel="nofollow">Sextet a Claques muziek</a>: Bladmuziek van de Franse band Sexted a Claques.</div>
+<li class="level1"><div class="li"><a class="urlextern" href="http://www.sextetaclaques.fr/partitions" rel="nofollow" title="http://www.sextetaclaques.fr/partitions">Sextet a Claques muziek</a>: Bladmuziek van de Franse band Sexted a Claques.</div>
 </li>
 </ul>
 
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
