--- a/source/web/algemeen/danswiki.html
+++ b/source/web/algemeen/danswiki.html
@@ -1,16 +1,16 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danswiki.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danswiki.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
-<div class="pull-right hidden-print dw-toc-affix" data-spy="affix" data-offset-top="150"><!-- TOC START -->
-<nav id="dokuwiki__toc" class="panel panel-default" role="navigation">
-<div class="panel-heading"><h3 class="panel-title open" data-toggle="collapse" data-target="#dokuwiki__toc .panel-collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
+<div class="pull-right hidden-print dw-toc-affix" data-offset-top="150" data-spy="affix"><!-- TOC START -->
+<nav class="panel panel-default" id="dokuwiki__toc" role="navigation">
+<div class="panel-heading"><h3 class="panel-title open" data-target="#dokuwiki__toc .panel-collapse" data-toggle="collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
 <div class="panel-collapse collapse in">
 <div class="panel-body">
 
@@ -43,7 +43,7 @@
 <div class="level3">
 
 <p>
-De DansWiki is zoals vele wiki&#039;s een online “encyclopedie”, maar dan specifiek over balfolk dansen. Iedereen die wil, kan er aan meedoen om hem te verbeteren door zich simpelweg aan te melden. Dit doe je door op “Registreren” te klikken rechtsboven en zodra je je account hebt aangemeld en bent ingelogd, kun je bezig met bijdragen.
+De DansWiki is zoals vele wiki's een online “encyclopedie”, maar dan specifiek over balfolk dansen. Iedereen die wil, kan er aan meedoen om hem te verbeteren door zich simpelweg aan te melden. Dit doe je door op “Registreren” te klikken rechtsboven en zodra je je account hebt aangemeld en bent ingelogd, kun je bezig met bijdragen.
 </p>
 
 </div>
@@ -52,7 +52,7 @@ De DansWiki is zoals vele wiki&#039;s een online “encyclopedie”, maar dan sp
 <div class="level4">
 
 <p>
-Na het registreren moet je wachten op een mailtje met het wachtwoord om de eerste keer in te loggen. Het kan zo&#039;n 5 minuten duren voordat het mailtje aankomt, maar mocht je hem dan alsnog niet in je inbox zien, kijk dan of hij niet in je Spam is beland en begin je vast achter je oren te krabben in de hoop uit te vinden of je wel het juiste emailadres hebt opgegeven. (Mocht het registreren echt niet lukken, neem dan even contact op met <a href="" class="urlextern" title="http://www.balfolkenschede.nl" rel="nofollow">Balfolk Enschede</a> en dan kijken zij wat er aan de hand is en aan gedaan kan worden.) Zodra je bent ingelogd met het automatisch gegenereerde wachtwoord heb je zelf de mogelijkheid dit te veranderen in iets wat beter te onthouden is.
+Na het registreren moet je wachten op een mailtje met het wachtwoord om de eerste keer in te loggen. Het kan zo'n 5 minuten duren voordat het mailtje aankomt, maar mocht je hem dan alsnog niet in je inbox zien, kijk dan of hij niet in je Spam is beland en begin je vast achter je oren te krabben in de hoop uit te vinden of je wel het juiste emailadres hebt opgegeven. (Mocht het registreren echt niet lukken, neem dan even contact op met <a class="urlextern" href="" rel="nofollow" title="http://www.balfolkenschede.nl">Balfolk Enschede</a> en dan kijken zij wat er aan de hand is en aan gedaan kan worden.) Zodra je bent ingelogd met het automatisch gegenereerde wachtwoord heb je zelf de mogelijkheid dit te veranderen in iets wat beter te onthouden is.
 </p>
 
 </div>
@@ -61,7 +61,7 @@ Na het registreren moet je wachten op een mailtje met het wachtwoord om de eerst
 <div class="level4">
 
 <p>
-Na het registreren kun je de pagina&#039;s dus aanpassen. Dit is allemaal heel leuk en aardig, maar om het overzichtelijk te houden, is het fijn als mensen dat op dezelfde manier blijven doen. Kijk dus even qua stijl naar wat “gebruikelijk” is op de pagina&#039;s en neem dat over bij het maken van nieuwe pagina&#039;s of het aanpassen van bestaande pagina&#039;s.
+Na het registreren kun je de pagina's dus aanpassen. Dit is allemaal heel leuk en aardig, maar om het overzichtelijk te houden, is het fijn als mensen dat op dezelfde manier blijven doen. Kijk dus even qua stijl naar wat “gebruikelijk” is op de pagina's en neem dat over bij het maken van nieuwe pagina's of het aanpassen van bestaande pagina's.
 </p>
 
 </div>
@@ -70,7 +70,7 @@ Na het registreren kun je de pagina&#039;s dus aanpassen. Dit is allemaal heel l
 <div class="level5">
 
 <p>
-Daarbij is het handig als je weet welke <a href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danswiki.html" class="wikilink1" title="wiki:syntax">syntax</a> te gebruiken. De syntax is de manier waarop je teksten zodanig in kunt voeren dat ze er ook uit komen te zien zoals je bedoelt met de juiste kopjes, linkjes e.d. De DansWiki is gebaseerd op <a href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danswiki.html" class="wikilink1" title="wiki:dokuwiki">DokuWiki</a>. Dit is een simpele vorm van wiki software zonder al te veel restricties en hij is vrij te gebruiken. De DokuWiki <a href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danswiki.html" class="wikilink1" title="wiki:syntax">syntax</a> is dan ook de syntax die je nodig hebt om hier pagina&#039;s te kunnen maken en aanpassen.
+Daarbij is het handig als je weet welke <a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danswiki.html" title="wiki:syntax">syntax</a> te gebruiken. De syntax is de manier waarop je teksten zodanig in kunt voeren dat ze er ook uit komen te zien zoals je bedoelt met de juiste kopjes, linkjes e.d. De DansWiki is gebaseerd op <a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danswiki.html" title="wiki:dokuwiki">DokuWiki</a>. Dit is een simpele vorm van wiki software zonder al te veel restricties en hij is vrij te gebruiken. De DokuWiki <a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danswiki.html" title="wiki:syntax">syntax</a> is dan ook de syntax die je nodig hebt om hier pagina's te kunnen maken en aanpassen.
 </p>
 
 </div>
@@ -97,7 +97,7 @@ Wanner je andermans materiaal gebruikt op de DansWiki, controleer dan even onder
 <div class="level5">
 
 <p>
-Als je graag wilt weten welke pagina&#039;s er allemaal al zijn, kun je op de hoofdpagina kijken, maar er is een kans dat er al een pagina bestaat die daar nog helemaal niet terug is te vinden. Daarvoor kun je in de <a href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danswiki.html" class="urlextern" title="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danswiki.html" rel="nofollow">index</a> kijken, waar een zogenaamde sitemap staat van alle pagina&#039;s die er al zijn. Je kunt er ook komen door “&amp;do=index” zonder de aanhalingstekens in je adresbalk te zetten achter ongeveer elk denkbare adres waarmee je op de DansWiki aanwezig bent.
+Als je graag wilt weten welke pagina's er allemaal al zijn, kun je op de hoofdpagina kijken, maar er is een kans dat er al een pagina bestaat die daar nog helemaal niet terug is te vinden. Daarvoor kun je in de <a class="urlextern" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danswiki.html" rel="nofollow" title="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danswiki.html">index</a> kijken, waar een zogenaamde sitemap staat van alle pagina's die er al zijn. Je kunt er ook komen door “&amp;do=index” zonder de aanhalingstekens in je adresbalk te zetten achter ongeveer elk denkbare adres waarmee je op de DansWiki aanwezig bent.
 </p>
 
 </div>
@@ -106,7 +106,7 @@ Als je graag wilt weten welke pagina&#039;s er allemaal al zijn, kun je op de ho
 <div class="level5">
 
 <p>
-De DansWiki heeft de mogelijkheid om per pagina te kijken naar de recente wijzigingen. Dit doe je door via het menu bovenin naar “Recente aanpassingen” te gaan of door “&amp;do=recent” zonder aanhalingstekens achter de <abbr title="Uniform Resource Locator">URL</abbr> van de pagina te plakken. Er is ook een pagina waarmee je alle recente aanpassingen van over de hele DansWiki kunt zien. Deze vindt je of via de hiervoor genoemde pagina of je kunt er direct naartoe gaan via <a href="doku.php﹖id=doku.php﹖id=nl﹕start.html" class="urlextern" title="doku.php﹖id=doku.php﹖id=nl﹕start.html" rel="nofollow">Recente wijzigingen</a>.
+De DansWiki heeft de mogelijkheid om per pagina te kijken naar de recente wijzigingen. Dit doe je door via het menu bovenin naar “Recente aanpassingen” te gaan of door “&amp;do=recent” zonder aanhalingstekens achter de <abbr title="Uniform Resource Locator">URL</abbr> van de pagina te plakken. Er is ook een pagina waarmee je alle recente aanpassingen van over de hele DansWiki kunt zien. Deze vindt je of via de hiervoor genoemde pagina of je kunt er direct naartoe gaan via <a class="urlextern" href="doku.php﹖id=doku.php﹖id=nl﹕start.html" rel="nofollow" title="doku.php﹖id=doku.php﹖id=nl﹕start.html">Recente wijzigingen</a>.
 </p>
 
 </div>
@@ -115,11 +115,11 @@ De DansWiki heeft de mogelijkheid om per pagina te kijken naar de recente wijzig
 <div class="level4">
 
 <p>
-Je hebt alle bestaande pagina&#039;s doorgespit, maar kon niet vinden wat je zocht en wilt een nieuwe pagina beginnen? Nou doe dat vooral en draag bij aan alle informatie. Er zijn twee makkelijk denkbare manieren om dit te bereiken. Bij de eerste zet je bovenin je adresbalk achter “id=” de gewenste naam van de nieuwe pagina en ga je naar dat adres. Je krijgt dan als het goed is de melding dat de pagina nog niet bestaat en de vraag of je hem aan wilt maken. De andere optie is een pagina zoeken vanaf waar er gelinkt moet worden naar de nieuwe pagina en dan kun je een interne link naar de nog niet bestaande pagina maken. Deze link zal rood verschijnen en zodra je er op klikt om er naartoe te gaan krijg je de mededeling dat de pagina nog niet bestaat en de vraag of je hem aan wilt maken. Het aanmaken kan door of in het menu (steeksleuteltje bovenaan) naar “Maak deze pagina aan” te gaan of dezelfde knop rechts in beeld (met het potloodje) te gebruiken.
+Je hebt alle bestaande pagina's doorgespit, maar kon niet vinden wat je zocht en wilt een nieuwe pagina beginnen? Nou doe dat vooral en draag bij aan alle informatie. Er zijn twee makkelijk denkbare manieren om dit te bereiken. Bij de eerste zet je bovenin je adresbalk achter “id=” de gewenste naam van de nieuwe pagina en ga je naar dat adres. Je krijgt dan als het goed is de melding dat de pagina nog niet bestaat en de vraag of je hem aan wilt maken. De andere optie is een pagina zoeken vanaf waar er gelinkt moet worden naar de nieuwe pagina en dan kun je een interne link naar de nog niet bestaande pagina maken. Deze link zal rood verschijnen en zodra je er op klikt om er naartoe te gaan krijg je de mededeling dat de pagina nog niet bestaat en de vraag of je hem aan wilt maken. Het aanmaken kan door of in het menu (steeksleuteltje bovenaan) naar “Maak deze pagina aan” te gaan of dezelfde knop rechts in beeld (met het potloodje) te gebruiken.
 </p>
 
 <p>
-Houd bij het maken van een nieuwe pagina wel rekening met de naam en de locatie (namespace) van de nieuwe pagina. De <a href="https://www.dokuwiki.org/nl:namespaces" class="urlextern" title="https://www.dokuwiki.org/nl:namespaces" rel="nofollow">namespace</a> wordt namelijk gebruikt voor overzicht, maar ook om de verschillende talen uit elkaar te houden. (Bijvoorbeeld nl:Balfolk en en:Balfolk zijn dezelfde pagina&#039;s in het Nederlands en in het Engels.) Gebruik bij voorkeur een korte duidelijke naam, zodat het ook makkelijk is om er naartoe te kunnen linken. Daarbij zijn de meeste pagina&#039;s gegroepeerd. Dat betekent dat alle dansen bijvoorbeeld niet gewoon “dansnaam” zijn qua locatie, maar “Taal:Dansen:dansnaam”. Dit om de locaties van alle pagina&#039;s wat overzichtelijker te houden en zodoende zaken wat makkelijker terug zijn te vinden. Probeer je ook aan dit systeem te houden.
+Houd bij het maken van een nieuwe pagina wel rekening met de naam en de locatie (namespace) van de nieuwe pagina. De <a class="urlextern" href="https://www.dokuwiki.org/nl:namespaces" rel="nofollow" title="https://www.dokuwiki.org/nl:namespaces">namespace</a> wordt namelijk gebruikt voor overzicht, maar ook om de verschillende talen uit elkaar te houden. (Bijvoorbeeld nl:Balfolk en en:Balfolk zijn dezelfde pagina's in het Nederlands en in het Engels.) Gebruik bij voorkeur een korte duidelijke naam, zodat het ook makkelijk is om er naartoe te kunnen linken. Daarbij zijn de meeste pagina's gegroepeerd. Dat betekent dat alle dansen bijvoorbeeld niet gewoon “dansnaam” zijn qua locatie, maar “Taal:Dansen:dansnaam”. Dit om de locaties van alle pagina's wat overzichtelijker te houden en zodoende zaken wat makkelijker terug zijn te vinden. Probeer je ook aan dit systeem te houden.
 </p>
 
 </div>
@@ -141,18 +141,18 @@ Om het overleg overzichtelijk te houden is het overigens wenselijk even per beri
 <div class="level3">
 
 <p>
-Zie hier een overzicht van alle geïnstalleerde plug-ins waarvan het nuttig kan zijn om te weten dat ze er zijn en hoe ze te gebruiken voor het aanpassen en maken van pagina&#039;s.
+Zie hier een overzicht van alle geïnstalleerde plug-ins waarvan het nuttig kan zijn om te weten dat ze er zijn en hoe ze te gebruiken voor het aanpassen en maken van pagina's.
 </p>
 <ul>
-<li class="level1"><div class="li"> <a href="https://www.dokuwiki.org/plugin:move" class="urlextern" title="https://www.dokuwiki.org/plugin:move" rel="nofollow">Move</a> kan worden gebruikt voor het verhuizen van pagina&#039;s terwijl alle links overal worden behouden. (Dus met deze plugin kan de naam of namespace van een pagina kan worden aangepast zonder dat je overal alle linkjes naar de pagina hoeft te updaten.)</div>
+<li class="level1"><div class="li"> <a class="urlextern" href="https://www.dokuwiki.org/plugin:move" rel="nofollow" title="https://www.dokuwiki.org/plugin:move">Move</a> kan worden gebruikt voor het verhuizen van pagina's terwijl alle links overal worden behouden. (Dus met deze plugin kan de naam of namespace van een pagina kan worden aangepast zonder dat je overal alle linkjes naar de pagina hoeft te updaten.)</div>
 </li>
-<li class="level1"><div class="li"> <a href="https://www.dokuwiki.org/plugin:multilingual" class="urlextern" title="https://www.dokuwiki.org/plugin:multilingual" rel="nofollow">Multi-Lingual</a> wordt gebruikt voor de meertaligheid van de website. Deze is dus verantwoordelijk voor de mooie vlaggetjes rechtsboven naar de andere talen en het hiermee weer kunnen geven van de beschikbare talen per pagina. Mocht er een verzoek zijn om nog meer talen toe te voegen dan er nu bij staan, omdat je serieus in die taal aan de slag wilt, dan is dit geen enkel probleem. Laat het even weten aan de Balfolk Enschede organisatie en het wordt geregeld.</div>
+<li class="level1"><div class="li"> <a class="urlextern" href="https://www.dokuwiki.org/plugin:multilingual" rel="nofollow" title="https://www.dokuwiki.org/plugin:multilingual">Multi-Lingual</a> wordt gebruikt voor de meertaligheid van de website. Deze is dus verantwoordelijk voor de mooie vlaggetjes rechtsboven naar de andere talen en het hiermee weer kunnen geven van de beschikbare talen per pagina. Mocht er een verzoek zijn om nog meer talen toe te voegen dan er nu bij staan, omdat je serieus in die taal aan de slag wilt, dan is dit geen enkel probleem. Laat het even weten aan de Balfolk Enschede organisatie en het wordt geregeld.</div>
 </li>
-<li class="level1"><div class="li"> <a href="https://www.dokuwiki.org/plugin:vshare" class="urlextern" title="https://www.dokuwiki.org/plugin:vshare" rel="nofollow">Video Sharing Site</a> wordt gebruikt voor het kunnen weergeven van filmpjes afkomstig van websites zoals Youtube.</div>
+<li class="level1"><div class="li"> <a class="urlextern" href="https://www.dokuwiki.org/plugin:vshare" rel="nofollow" title="https://www.dokuwiki.org/plugin:vshare">Video Sharing Site</a> wordt gebruikt voor het kunnen weergeven van filmpjes afkomstig van websites zoals Youtube.</div>
 </li>
-<li class="level1"><div class="li"> <a href="https://www.dokuwiki.org/plugin:refnotes" class="urlextern" title="https://www.dokuwiki.org/plugin:refnotes" rel="nofollow">refNotes</a> kan worden gebruik voor het makkelijk linken naar referenties/bronnen vanuit de tekst.</div>
+<li class="level1"><div class="li"> <a class="urlextern" href="https://www.dokuwiki.org/plugin:refnotes" rel="nofollow" title="https://www.dokuwiki.org/plugin:refnotes">refNotes</a> kan worden gebruik voor het makkelijk linken naar referenties/bronnen vanuit de tekst.</div>
 </li>
-<li class="level1"><div class="li"> <a href="https://www.dokuwiki.org/plugin:edittable" class="urlextern" title="https://www.dokuwiki.org/plugin:edittable" rel="nofollow">EditTable</a> kan worden gebruikt om wat gemakkelijker tabellen aan te maken/aan te passen.</div>
+<li class="level1"><div class="li"> <a class="urlextern" href="https://www.dokuwiki.org/plugin:edittable" rel="nofollow" title="https://www.dokuwiki.org/plugin:edittable">EditTable</a> kan worden gebruikt om wat gemakkelijker tabellen aan te maken/aan te passen.</div>
 </li>
 </ul>
 
@@ -163,7 +163,8 @@ Op verzoek kunnen er meer plug-ins worden geïnstalleerd. Mocht je iets missen d
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
