--- a/source/web/algemeen/etikette.html
+++ b/source/web/algemeen/etikette.html
@@ -1,16 +1,16 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕etikette.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕etikette.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
-<div class="pull-right hidden-print dw-toc-affix" data-spy="affix" data-offset-top="150"><!-- TOC START -->
-<nav id="dokuwiki__toc" class="panel panel-default" role="navigation">
-<div class="panel-heading"><h3 class="panel-title open" data-toggle="collapse" data-target="#dokuwiki__toc .panel-collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
+<div class="pull-right hidden-print dw-toc-affix" data-offset-top="150" data-spy="affix"><!-- TOC START -->
+<nav class="panel panel-default" id="dokuwiki__toc" role="navigation">
+<div class="panel-heading"><h3 class="panel-title open" data-target="#dokuwiki__toc .panel-collapse" data-toggle="collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
 <div class="panel-collapse collapse in">
 <div class="panel-body">
 
@@ -40,7 +40,7 @@
 </li>
 <li class="level1"><div class="li">Houd bij vlotte paardansen (polska, polka, wals) de rand van de dansvloer vrij voor de meer ervaren paren: deze paren kunnen dan als ze snelheid willen maken de buitenbaan nemen (net als bij schaatsen).</div>
 </li>
-<li class="level1"><div class="li">Houd rekening met de dansrichting, doorgaans tegen de klok in: het `hoort&#039; nou eenmaal zo en dit is een belangrijke manier om botsingen te voorkomen.</div>
+<li class="level1"><div class="li">Houd rekening met de dansrichting, doorgaans tegen de klok in: het `hoort' nou eenmaal zo en dit is een belangrijke manier om botsingen te voorkomen.</div>
 </li>
 <li class="level1"><div class="li">Kijk tijdens het dansen goed uit waar de andere dansers zijn en heengaan. De dame kan op drukke vloeren ook meekijken en de heer met haar linkerhand afremmen als dit nodig is.</div>
 </li>
@@ -94,7 +94,7 @@
 </li>
 <li class="level1"><div class="li">Als er een sessieleider is, luister daar dan naar!</div>
 </li>
-<li class="level1"><div class="li">Als er veel van hetzelfde instrument aanwezig zijn, probeer dan niet steeds met z&#039;n allen tegelijk te spelen (ik denk aan tien trekzakken of acht bodhráns…).</div>
+<li class="level1"><div class="li">Als er veel van hetzelfde instrument aanwezig zijn, probeer dan niet steeds met z'n allen tegelijk te spelen (ik denk aan tien trekzakken of acht bodhráns…).</div>
 </li>
 <li class="level1"><div class="li">Luister naar wat de andere muzikanten aanbieden. Misschien is het niet wat je normaal zou doen, maar het kan toch heel waardevol zijn. </div>
 </li>
@@ -107,7 +107,8 @@
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
