--- a/source/web/algemeen/terminologie.html
+++ b/source/web/algemeen/terminologie.html
@@ -1,16 +1,16 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕terminologie.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕terminologie.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
-<div class="pull-right hidden-print dw-toc-affix" data-spy="affix" data-offset-top="150"><!-- TOC START -->
-<nav id="dokuwiki__toc" class="panel panel-default" role="navigation">
-<div class="panel-heading"><h3 class="panel-title open" data-toggle="collapse" data-target="#dokuwiki__toc .panel-collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
+<div class="pull-right hidden-print dw-toc-affix" data-offset-top="150" data-spy="affix"><!-- TOC START -->
+<nav class="panel panel-default" id="dokuwiki__toc" role="navigation">
+<div class="panel-heading"><h3 class="panel-title open" data-target="#dokuwiki__toc .panel-collapse" data-toggle="collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
 <div class="panel-collapse collapse in">
 <div class="panel-body">
 
@@ -341,7 +341,7 @@ Stap met de rechtervoet vóór de linker langs, met doorbuigen in de rechter kni
 </p>
 
 <p>
-Niet te verwarren met het “SPINNEN” - dat doe je met z&#039;n tweeën.
+Niet te verwarren met het “SPINNEN” - dat doe je met z'n tweeën.
 </p>
 
 </div>
@@ -472,7 +472,8 @@ Hierbij worden de RECHTER voeten met de BUITENKANTEN naast elkaar gezet.
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
