--- a/source/web/dansen/an_dro.html
+++ b/source/web/dansen/an_dro.html
@@ -1,16 +1,16 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕an_dro.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕an_dro.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
-<div class="pull-right hidden-print dw-toc-affix" data-spy="affix" data-offset-top="150"><!-- TOC START -->
-<nav id="dokuwiki__toc" class="panel panel-default" role="navigation">
-<div class="panel-heading"><h3 class="panel-title open" data-toggle="collapse" data-target="#dokuwiki__toc .panel-collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
+<div class="pull-right hidden-print dw-toc-affix" data-offset-top="150" data-spy="affix"><!-- TOC START -->
+<nav class="panel panel-default" id="dokuwiki__toc" role="navigation">
+<div class="panel-heading"><h3 class="panel-title open" data-target="#dokuwiki__toc .panel-collapse" data-toggle="collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
 <div class="panel-collapse collapse in">
 <div class="panel-body">
 
@@ -25,7 +25,7 @@
 </li>
 <li class="level3"><a href="#tips_voor_muzikanten">Tips voor muzikanten</a></li>
 <li class="level3"><a href="#voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</a></li>
-<li class="level3"><a href="#externe_pagina_s">Externe Pagina&#039;s</a></li>
+<li class="level3"><a href="#externe_pagina_s">Externe Pagina's</a></li>
 </ul>
 
 </div>
@@ -54,7 +54,7 @@ Iedereen in 1 of meerdere lange slierten. Waar mannen en vrouwen in de rij staan
 <h4 class="sectionedit3" id="basis">Basis</h4>
 <div class="level4">
 <ul>
-<li class="level1"><div class="li">Volg-de-leider: houdt elkaar vast bij de pinken, palm van de hand wijst omlaag. Je haakt je pink in de pink van de persoon naast je. Ook al hebben alleen de pinken elkaar vast, de hele onderarm houdt contact. Op die manier &#039;verlies&#039; je elkaar niet. De leider en laatste kunnen de vrije arm op de rug doen. In Bretagne wordt dit heel vaak ook niet gedaan. Voor dames: mocht je iets met de vrije arm willen doen, pak dan je rok in je hand. De hand op de rug is traditioneel iets voor mannen.</div>
+<li class="level1"><div class="li">Volg-de-leider: houdt elkaar vast bij de pinken, palm van de hand wijst omlaag. Je haakt je pink in de pink van de persoon naast je. Ook al hebben alleen de pinken elkaar vast, de hele onderarm houdt contact. Op die manier 'verlies' je elkaar niet. De leider en laatste kunnen de vrije arm op de rug doen. In Bretagne wordt dit heel vaak ook niet gedaan. Voor dames: mocht je iets met de vrije arm willen doen, pak dan je rok in je hand. De hand op de rug is traditioneel iets voor mannen.</div>
 </li>
 <li class="level1"><div class="li">Verplaatsingsrichting is naar links, kijkrichting is vooruit. Je beweegt dus zijwaarts, en altijd alleen naar links.</div>
 </li>
@@ -114,7 +114,8 @@ Iedereen in 1 of meerdere lange slierten. Waar mannen en vrouwen in de rij staan
 </li>
 <li class="level2"><div class="li">ga voor de grap eens onder iemands a
 </div>
-          </div>
+          </li></ul></li></ul></div>
         </div>
 
       </article>
+</body></html>
