--- a/source/web/dansen/bourree_d_auvergne.html
+++ b/source/web/dansen/bourree_d_auvergne.html
@@ -1,21 +1,21 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_d_auvergne.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_d_auvergne.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
-<div class="pull-right hidden-print dw-toc-affix" data-spy="affix" data-offset-top="150"><!-- TOC START -->
-<nav id="dokuwiki__toc" class="panel panel-default" role="navigation">
-<div class="panel-heading"><h3 class="panel-title open" data-toggle="collapse" data-target="#dokuwiki__toc .panel-collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
+<div class="pull-right hidden-print dw-toc-affix" data-offset-top="150" data-spy="affix"><!-- TOC START -->
+<nav class="panel panel-default" id="dokuwiki__toc" role="navigation">
+<div class="panel-heading"><h3 class="panel-title open" data-target="#dokuwiki__toc .panel-collapse" data-toggle="collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
 <div class="panel-collapse collapse in">
 <div class="panel-body">
 
 <ul class="nav nav-pills nav-stacked toc">
-<li class="level3"><a href="#bourree_d_auvergne">Bourrée d&#039;Auvergne</a>
+<li class="level3"><a href="#bourree_d_auvergne">Bourrée d'Auvergne</a>
 <ul class="nav nav-pills nav-stacked toc">
 <li class="level4"><a href="#opstelling">Opstelling</a></li>
 <li class="level4"><a href="#basis">Basis</a>
@@ -39,7 +39,7 @@
 </nav>
 <!-- TOC END -->
 </div><div class="dw-content">
-<h3 class="sectionedit1" id="bourree_d_auvergne">Bourrée d&#039;Auvergne</h3>
+<h3 class="sectionedit1" id="bourree_d_auvergne">Bourrée d'Auvergne</h3>
 <div class="level3">
 
 <p>
@@ -238,18 +238,19 @@ Bij een vrijere dans kunnen bijvoorbeeld richtingsveranderingen en andere initia
 <h3 class="sectionedit6" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
 <div class="level3">
 <ul>
-<li class="level1"><div class="li">Bourrée 3t d&#039;Auvergne instructie</div>
+<li class="level1"><div class="li">Bourrée 3t d'Auvergne instructie</div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/A186jBMs6sE" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe><ul>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/A186jBMs6sE" width="425"></iframe><ul>
 <li class="level1"><div class="li">Chemins de Traverse au bal folk de Bures-sur-Yvette le samedi 19 mai 2007 </div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/NcIXw6u-65U" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/NcIXw6u-65U" width="425"></iframe>
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
