--- a/source/web/dansen/bourree_du_berry_bourree_en_cercle.html
+++ b/source/web/dansen/bourree_du_berry_bourree_en_cercle.html
@@ -1,16 +1,16 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕bourree_en_cercle.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕bourree_en_cercle.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
-<div class="pull-right hidden-print dw-toc-affix" data-spy="affix" data-offset-top="150"><!-- TOC START -->
-<nav id="dokuwiki__toc" class="panel panel-default" role="navigation">
-<div class="panel-heading"><h3 class="panel-title open" data-toggle="collapse" data-target="#dokuwiki__toc .panel-collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
+<div class="pull-right hidden-print dw-toc-affix" data-offset-top="150" data-spy="affix"><!-- TOC START -->
+<nav class="panel panel-default" id="dokuwiki__toc" role="navigation">
+<div class="panel-heading"><h3 class="panel-title open" data-target="#dokuwiki__toc .panel-collapse" data-toggle="collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
 <div class="panel-collapse collapse in">
 <div class="panel-body">
 
@@ -34,7 +34,7 @@
 <div class="level3">
 
 <p>
-In Nederland soms ook Bourrée en Ronde genoemd. Bourréevariant die los in een cirkel of een aantal concentrische cirkels wordt gedanst. Oorspronkelijke benaming was &#039;Brande d&#039;Ardentes&#039;.
+In Nederland soms ook Bourrée en Ronde genoemd. Bourréevariant die los in een cirkel of een aantal concentrische cirkels wordt gedanst. Oorspronkelijke benaming was 'Brande d'Ardentes'.
 </p>
 
 </div>
@@ -72,15 +72,16 @@ De pas is de basispas van de bourrée, maar wel in de épaule-variant: tijdens d
 <li class="level1"><div class="li">Gonnagles in Hamburg </div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/xhUJk05QnBQ" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe><ul>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/xhUJk05QnBQ" width="425"></iframe><ul>
 <li class="level1"><div class="li">Bourree en cercle op de manier die gebruikelijk is in Frankrijk. De melodie komt van VAG. </div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/DNXi_O3fe8o" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/DNXi_O3fe8o" width="425"></iframe>
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
