--- a/source/web/dansen/cercle.html
+++ b/source/web/dansen/cercle.html
@@ -1,16 +1,16 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕cercle.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕cercle.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
-<div class="pull-right hidden-print dw-toc-affix" data-spy="affix" data-offset-top="150"><!-- TOC START -->
-<nav id="dokuwiki__toc" class="panel panel-default" role="navigation">
-<div class="panel-heading"><h3 class="panel-title open" data-toggle="collapse" data-target="#dokuwiki__toc .panel-collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
+<div class="pull-right hidden-print dw-toc-affix" data-offset-top="150" data-spy="affix"><!-- TOC START -->
+<nav class="panel panel-default" id="dokuwiki__toc" role="navigation">
+<div class="panel-heading"><h3 class="panel-title open" data-target="#dokuwiki__toc .panel-collapse" data-toggle="collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
 <div class="panel-collapse collapse in">
 <div class="panel-body">
 
@@ -30,7 +30,7 @@
 </ul>
 </li>
 <li class="level3"><a href="#voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</a></li>
-<li class="level3"><a href="#externe_pagina_s">Externe Pagina&#039;s</a></li>
+<li class="level3"><a href="#externe_pagina_s">Externe Pagina's</a></li>
 </ul>
 
 </div>
@@ -51,7 +51,7 @@ Een vrolijke mixer. Wordt in Vlaanderen Tovercirkel genoemd. En in Frankrijk Cer
 <div class="level4">
 
 <p>
-Een grote cirkel met om en om man en vrouw, iedereen houdt elkaars handen vast. De vrouwen leggen hun handen bovenop de handen van de heer. De &#039;eerstvolgende paren&#039; zijn (man rechts/vrouw links)
+Een grote cirkel met om en om man en vrouw, iedereen houdt elkaars handen vast. De vrouwen leggen hun handen bovenop de handen van de heer. De 'eerstvolgende paren' zijn (man rechts/vrouw links)
 </p>
 
 </div>
@@ -117,9 +117,9 @@ Hoe houd je vast…
 </li>
 <li class="level1 node"><div class="li">B: verschillende mogelijkheden:</div>
 <ul>
-<li class="level2"><div class="li">meest gebruikt in Nederland en Vlaanderen: rechter hand bij partner op rechter schouder, linker hand er onder door: pols beetpakken. houdt er spanning op zodat je allebei naar achter kan hangen om er meer vaart in te houden. plaats de rechtervoeten met de buitenkant tegen elkaar in het midden. hier draai je omheen door met de linkervoet te &#039;steppen&#039;.</div>
+<li class="level2"><div class="li">meest gebruikt in Nederland en Vlaanderen: rechter hand bij partner op rechter schouder, linker hand er onder door: pols beetpakken. houdt er spanning op zodat je allebei naar achter kan hangen om er meer vaart in te houden. plaats de rechtervoeten met de buitenkant tegen elkaar in het midden. hier draai je omheen door met de linkervoet te 'steppen'.</div>
 </li>
-<li class="level2"><div class="li">meest gebruikt in Wallonië en Frankrijk: ga in halfopen danshouding staan, maar met de rechtervoeten aan de buitenkant tegen elkaar. &#039;Step&#039; met de linkervoet erom heen. Op het einde van het tollen is het dan het makkelijkst om gewoon te openen en in deel C in open danshouding rond te wandelen.</div>
+<li class="level2"><div class="li">meest gebruikt in Wallonië en Frankrijk: ga in halfopen danshouding staan, maar met de rechtervoeten aan de buitenkant tegen elkaar. 'Step' met de linkervoet erom heen. Op het einde van het tollen is het dan het makkelijkst om gewoon te openen en in deel C in open danshouding rond te wandelen.</div>
 </li>
 </ul>
 </li>
@@ -161,33 +161,34 @@ Hoe houd je vast…
 <h3 class="sectionedit6" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
 <div class="level3">
 <ul>
-<li class="level1"><div class="li">Bladmuziek <a href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/101" class="urlextern" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/101" rel="nofollow">Tovercirkel</a>:   </div>
+<li class="level1"><div class="li">Bladmuziek <a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/101" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/101">Tovercirkel</a>:   </div>
 </li>
-<li class="level1"><div class="li">Opname <a href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/101" class="urlextern" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/101" rel="nofollow">Tovercirkel</a>: </div>
+<li class="level1"><div class="li">Opname <a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/101" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/101">Tovercirkel</a>: </div>
 </li>
 </ul>
 <ul>
 <li class="level1"><div class="li">Cercle circassien</div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/-G0zatPjrh4" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe><ul>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/-G0zatPjrh4" width="425"></iframe><ul>
 <li class="level1"><div class="li">Double D op de Elf Fantasy Fair (workshop van Wen en Emelie)</div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/0GK8_DS5ZMg" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/0GK8_DS5ZMg" width="425"></iframe>
 </div>
 
-<h3 class="sectionedit7" id="externe_pagina_s">Externe Pagina&#039;s</h3>
+<h3 class="sectionedit7" id="externe_pagina_s">Externe Pagina's</h3>
 <div class="level3">
 <ul>
-<li class="level1"><div class="li"><a href="BFdances.html#tovercirkel" class="urlextern" title="http://celticbompa.4t.com/BFdances.html#tovercirkel" rel="nofollow">Celtic Bompa Circassian Circle</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="BFdances.html#tovercirkel" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#tovercirkel">Celtic Bompa Circassian Circle</a></div>
 </li>
 </ul>
 
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
