--- a/source/web/dansen/hanter_dro.html
+++ b/source/web/dansen/hanter_dro.html
@@ -1,16 +1,16 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕hanter_dro﹕hanter-dro_klamm.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕hanter_dro﹕hanter-dro_klamm.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
-<div class="pull-right hidden-print dw-toc-affix" data-spy="affix" data-offset-top="150"><!-- TOC START -->
-<nav id="dokuwiki__toc" class="panel panel-default" role="navigation">
-<div class="panel-heading"><h3 class="panel-title open" data-toggle="collapse" data-target="#dokuwiki__toc .panel-collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
+<div class="pull-right hidden-print dw-toc-affix" data-offset-top="150" data-spy="affix"><!-- TOC START -->
+<nav class="panel panel-default" id="dokuwiki__toc" role="navigation">
+<div class="panel-heading"><h3 class="panel-title open" data-target="#dokuwiki__toc .panel-collapse" data-toggle="collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
 <div class="panel-collapse collapse in">
 <div class="panel-body">
 
@@ -33,7 +33,7 @@
 <div class="level3">
 
 <p>
-Nog rustiger en meditatiever dan de <a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕an_dro.html" class="wikilink1" title="nl:dansen:an_dro">An Dro</a>
+Nog rustiger en meditatiever dan de <a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕an_dro.html" title="nl:dansen:an_dro">An Dro</a>
 </p>
 
 </div>
@@ -74,7 +74,7 @@ In 1 of meerdere lange slierten. Mannetje/vrouwtje maakt niet uit
 <ul>
 <li class="level1"><div class="li">zie An Dro</div>
 </li>
-<li class="level1"><div class="li">De Hanter Dro en An Dro kunnen ook om en om gedaan worden (na 4x bijvoorbeeld). Je houdt elkaar bij het Hanter Dro gedeelte dan bij de pinken vast, maar hebt wel de ellebogen over elkaar. (wees voorzichtig bij het wisselen, ga niet te ver uit elkaar bij de An Dro). De muziek geeft dan aan welk deel wanneer gedaan wordt. Zo&#039;n afwisseling wordt tricot genoemd.</div>
+<li class="level1"><div class="li">De Hanter Dro en An Dro kunnen ook om en om gedaan worden (na 4x bijvoorbeeld). Je houdt elkaar bij het Hanter Dro gedeelte dan bij de pinken vast, maar hebt wel de ellebogen over elkaar. (wees voorzichtig bij het wisselen, ga niet te ver uit elkaar bij de An Dro). De muziek geeft dan aan welk deel wanneer gedaan wordt. Zo'n afwisseling wordt tricot genoemd.</div>
 </li>
 <li class="level1"><div class="li">een steeds dikker op elkaar gepakte rol met de leider (of een muzikant) in het midden, die alleen nog maar rondjes op de plaats maakt. (erg warm en gezellig) </div>
 </li>
@@ -83,7 +83,8 @@ In 1 of meerdere lange slierten. Mannetje/vrouwtje maakt niet uit
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
