--- a/source/web/dansen/hanter_dro_hanter-dro_klamm.html
+++ b/source/web/dansen/hanter_dro_hanter-dro_klamm.html
@@ -1,16 +1,16 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕hanter_dro﹕hanter-dro_klamm.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕hanter_dro﹕hanter-dro_klamm.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
-<div class="pull-right hidden-print dw-toc-affix" data-spy="affix" data-offset-top="150"><!-- TOC START -->
-<nav id="dokuwiki__toc" class="panel panel-default" role="navigation">
-<div class="panel-heading"><h3 class="panel-title open" data-toggle="collapse" data-target="#dokuwiki__toc .panel-collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
+<div class="pull-right hidden-print dw-toc-affix" data-offset-top="150" data-spy="affix"><!-- TOC START -->
+<nav class="panel panel-default" id="dokuwiki__toc" role="navigation">
+<div class="panel-heading"><h3 class="panel-title open" data-target="#dokuwiki__toc .panel-collapse" data-toggle="collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
 <div class="panel-collapse collapse in">
 <div class="panel-body">
 
@@ -35,7 +35,7 @@
 <div class="level3">
 
 <p>
-Een variant van de <a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕hanter_dro﹕hanter-dro_klamm.html" class="wikilink1" title="nl:dansen:hanter_dro">Hanter Dro</a>.
+Een variant van de <a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕hanter_dro﹕hanter-dro_klamm.html" title="nl:dansen:hanter_dro">Hanter Dro</a>.
 </p>
 
 </div>
@@ -44,7 +44,7 @@ Een variant van de <a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕hanter_dro
 <div class="level4">
 
 <p>
-Zie <a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕hanter_dro﹕hanter-dro_klamm.html" class="wikilink1" title="nl:dansen:hanter_dro">Hanter Dro</a>
+Zie <a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕hanter_dro﹕hanter-dro_klamm.html" title="nl:dansen:hanter_dro">Hanter Dro</a>
 </p>
 
 </div>
@@ -78,11 +78,12 @@ Een variant van de Hanter Dro waarbij je af en toe één tel helemaal stilstaat 
 
 <h3 class="sectionedit6" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
 <div class="level3">
-<iframe src="https://www.youtube.com/embed/XyYs53rtXkY" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/XyYs53rtXkY" width="425"></iframe>
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
