--- a/source/web/dansen/jig.html
+++ b/source/web/dansen/jig.html
@@ -1,16 +1,16 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕jig.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕jig.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
-<div class="pull-right hidden-print dw-toc-affix" data-spy="affix" data-offset-top="150"><!-- TOC START -->
-<nav id="dokuwiki__toc" class="panel panel-default" role="navigation">
-<div class="panel-heading"><h3 class="panel-title open" data-toggle="collapse" data-target="#dokuwiki__toc .panel-collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
+<div class="pull-right hidden-print dw-toc-affix" data-offset-top="150" data-spy="affix"><!-- TOC START -->
+<nav class="panel panel-default" id="dokuwiki__toc" role="navigation">
+<div class="panel-heading"><h3 class="panel-title open" data-target="#dokuwiki__toc .panel-collapse" data-toggle="collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
 <div class="panel-collapse collapse in">
 <div class="panel-body">
 
@@ -29,7 +29,7 @@
 </ul>
 </li>
 <li class="level3"><a href="#voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</a></li>
-<li class="level3"><a href="#externe_pagina_s">Externe Pagina&#039;s</a></li>
+<li class="level3"><a href="#externe_pagina_s">Externe Pagina's</a></li>
 </ul>
 
 </div>
@@ -58,7 +58,7 @@ Flankkring van paren.
 </p>
 
 <p>
-De paren staan &#039;in optocht&#039; achter elkaar in een grote kring..
+De paren staan 'in optocht' achter elkaar in een grote kring..
 </p>
 
 <p>
@@ -134,7 +134,7 @@ Rechterhand heer en linkerhand dame zijn vast, hand van heer is onder)
 </li>
 <li class="level1"><div class="li">Bij naar elkaar toe springen kwartslag gedraaid zijn naar elkaar toe.</div>
 </li>
-<li class="level1"><div class="li">Halverweg I draait de heer de dame met één of twee handen een hele slag in en ze lopen nog steeds vooruit en bij het eerste deel van B achteruit. In het tweede deel van b volgt een draai &#039;uit&#039;. </div>
+<li class="level1"><div class="li">Halverweg I draait de heer de dame met één of twee handen een hele slag in en ze lopen nog steeds vooruit en bij het eerste deel van B achteruit. In het tweede deel van b volgt een draai 'uit'. </div>
 </li>
 </ul>
 
@@ -143,47 +143,48 @@ Rechterhand heer en linkerhand dame zijn vast, hand van heer is onder)
 <h3 class="sectionedit6" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
 <div class="level3">
 <ul>
-<li class="level1 node"><div class="li">Bladmuziek <a href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/139" class="urlextern" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/139" rel="nofollow">Texel Gigue</a>:   </div>
+<li class="level1 node"><div class="li">Bladmuziek <a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/139" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/139">Texel Gigue</a>:   </div>
 <ul>
-<li class="level2"><div class="li"><a href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/sheets/download/370" class="urlextern" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/sheets/download/370" rel="nofollow">PDF Bladmuziek</a></div>
+<li class="level2"><div class="li"><a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/sheets/download/370" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/sheets/download/370">PDF Bladmuziek</a></div>
 </li>
-<li class="level2"><div class="li"><a href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/sheets/download/370/midi" class="urlextern" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/sheets/download/370/midi" rel="nofollow">midi</a></div>
+<li class="level2"><div class="li"><a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/sheets/download/370/midi" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/sheets/download/370/midi">midi</a></div>
 </li>
 </ul>
 </li>
-<li class="level1"><div class="li">Opname  <a href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/139" class="urlextern" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/139" rel="nofollow">Texel Gigue</a></div>
+<li class="level1"><div class="li">Opname  <a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/139" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/139">Texel Gigue</a></div>
 </li>
 </ul>
 <ul>
-<li class="level1"><div class="li">Op Elf Fantasy Fair (<a href="http://embrun.be/" class="urlextern" title="http://embrun.be/" rel="nofollow">EmBRUN</a>)</div>
+<li class="level1"><div class="li">Op Elf Fantasy Fair (<a class="urlextern" href="http://embrun.be/" rel="nofollow" title="http://embrun.be/">EmBRUN</a>)</div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/fqx-kKXLIWE" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe><ul>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/fqx-kKXLIWE" width="425"></iframe><ul>
 <li class="level1"><div class="li">Gonnagles (Musicon)</div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/UhtkFaeZm20" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe><ul>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/UhtkFaeZm20" width="425"></iframe><ul>
 <li class="level1"><div class="li">Country versie, maar geeft goed de basis weer </div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/8kzn58gpDFk" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe><ul>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/8kzn58gpDFk" width="425"></iframe><ul>
 <li class="level1"><div class="li">Chapelloise</div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/0o5TBDryY9E" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/0o5TBDryY9E" width="425"></iframe>
 </div>
 
-<h3 class="sectionedit7" id="externe_pagina_s">Externe Pagina&#039;s</h3>
+<h3 class="sectionedit7" id="externe_pagina_s">Externe Pagina's</h3>
 <div class="level3">
 <ul>
-<li class="level1"><div class="li"><a href="http://www.folkroddels.be/artikels/1548.html" class="urlextern" title="http://www.folkroddels.be/artikels/1548.html" rel="nofollow">Folkroddels.be: Waarom dansen wij het Aapje op een jig?</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="http://www.folkroddels.be/artikels/1548.html" rel="nofollow" title="http://www.folkroddels.be/artikels/1548.html">Folkroddels.be: Waarom dansen wij het Aapje op een jig?</a></div>
 </li>
 </ul>
 
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
