--- a/source/web/dansen/kost_ar_c_hoat.html
+++ b/source/web/dansen/kost_ar_c_hoat.html
@@ -1,15 +1,15 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕kost_ar_c_hoat.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕kost_ar_c_hoat.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
 <div class="dw-content">
-<h3 class="sectionedit1" id="kost_ar_c_hoat">Kost ar C&#039;hoat</h3>
+<h3 class="sectionedit1" id="kost_ar_c_hoat">Kost ar C'hoat</h3>
 <div class="level3">
 
 </div>
@@ -17,14 +17,15 @@
 <h3 class="sectionedit2" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
 <div class="level3">
 <ul>
-<li class="level1"><div class="li">Initiation Kost ar C&#039;hoat (instructie)</div>
+<li class="level1"><div class="li">Initiation Kost ar C'hoat (instructie)</div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/fUTWJGoBXqo" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/fUTWJGoBXqo" width="425"></iframe>
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
