--- a/source/web/dansen/laride.html
+++ b/source/web/dansen/laride.html
@@ -1,16 +1,16 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕laride﹕ridee.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕laride﹕ridee.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
-<div class="pull-right hidden-print dw-toc-affix" data-spy="affix" data-offset-top="150"><!-- TOC START -->
-<nav id="dokuwiki__toc" class="panel panel-default" role="navigation">
-<div class="panel-heading"><h3 class="panel-title open" data-toggle="collapse" data-target="#dokuwiki__toc .panel-collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
+<div class="pull-right hidden-print dw-toc-affix" data-offset-top="150" data-spy="affix"><!-- TOC START -->
+<nav class="panel panel-default" id="dokuwiki__toc" role="navigation">
+<div class="panel-heading"><h3 class="panel-title open" data-target="#dokuwiki__toc .panel-collapse" data-toggle="collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
 <div class="panel-collapse collapse in">
 <div class="panel-body">
 
@@ -108,7 +108,7 @@ In 1 of meerdere lange slierten.
 <div class="level4">
 
 <p>
-Zie <a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕an_dro.html" class="wikilink1" title="nl:dansen:an_dro">An Dro</a>
+Zie <a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕an_dro.html" title="nl:dansen:an_dro">An Dro</a>
 </p>
 
 </div>
@@ -119,15 +119,16 @@ Zie <a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕an_dro.html" class="wikil
 <li class="level1"><div class="li">Laridé 8 temps </div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/4mZwUelKKw0" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe><ul>
-<li class="level1"><div class="li">Filmpje van Boombalfestival 2009 (muzikant onbekend) (opgenomen door Herman Horsten, <a href="http://www.hermanhorsten.be/" class="urlextern" title="http://www.hermanhorsten.be" rel="nofollow">www.hermanhorsten.be</a>):</div>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/4mZwUelKKw0" width="425"></iframe><ul>
+<li class="level1"><div class="li">Filmpje van Boombalfestival 2009 (muzikant onbekend) (opgenomen door Herman Horsten, <a class="urlextern" href="http://www.hermanhorsten.be/" rel="nofollow" title="http://www.hermanhorsten.be">www.hermanhorsten.be</a>):</div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/aEqJLL9o60U" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/aEqJLL9o60U" width="425"></iframe>
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
