--- a/source/web/dansen/mazurka.html
+++ b/source/web/dansen/mazurka.html
@@ -1,16 +1,16 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕mazurka.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕mazurka.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
-<div class="pull-right hidden-print dw-toc-affix" data-spy="affix" data-offset-top="150"><!-- TOC START -->
-<nav id="dokuwiki__toc" class="panel panel-default" role="navigation">
-<div class="panel-heading"><h3 class="panel-title open" data-toggle="collapse" data-target="#dokuwiki__toc .panel-collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
+<div class="pull-right hidden-print dw-toc-affix" data-offset-top="150" data-spy="affix"><!-- TOC START -->
+<nav class="panel panel-default" id="dokuwiki__toc" role="navigation">
+<div class="panel-heading"><h3 class="panel-title open" data-target="#dokuwiki__toc .panel-collapse" data-toggle="collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
 <div class="panel-collapse collapse in">
 <div class="panel-body">
 
@@ -24,7 +24,7 @@
 </ul>
 </li>
 <li class="level3"><a href="#voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</a></li>
-<li class="level3"><a href="#externe_pagina_s">Externe Pagina&#039;s</a></li>
+<li class="level3"><a href="#externe_pagina_s">Externe Pagina's</a></li>
 </ul>
 
 </div>
@@ -45,7 +45,7 @@ Romantische parendans
 <div class="level4">
 
 <p>
-<a href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danshouding.html#half-open" class="wikilink1" title="nl:algemeen:danshouding">Half-open houding</a>, gewoon in paren over de dansvloer heen.
+<a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danshouding.html#half-open" title="nl:algemeen:danshouding">Half-open houding</a>, gewoon in paren over de dansvloer heen.
 </p>
 
 </div>
@@ -113,36 +113,37 @@ Romantische parendans
 <li class="level1"><div class="li">Franse mazurka instructie</div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/SOMAKkDINZU" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe><ul>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/SOMAKkDINZU" width="425"></iframe><ul>
 <li class="level1"><div class="li">Mazurka van Bert Leemans en Jeroen Geerinck, veel inspiratie voor variaties in de filmpjes: </div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/a2O36J2rgdA" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe><iframe src="https://www.youtube.com/embed/mXh0JmisAS4" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe><ul>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/a2O36J2rgdA" width="425"></iframe><iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/mXh0JmisAS4" width="425"></iframe><ul>
 <li class="level1"><div class="li">Mazurka van Jet Zoon en Marjolijn Bloemmen </div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/yDkGhHhTJlk" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe><ul>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/yDkGhHhTJlk" width="425"></iframe><ul>
 <li class="level1"><div class="li">Mazurka van onbekend op Damada 2008 </div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/v7Upg0GSpgU" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/v7Upg0GSpgU" width="425"></iframe>
 </div>
 
-<h3 class="sectionedit7" id="externe_pagina_s">Externe Pagina&#039;s</h3>
+<h3 class="sectionedit7" id="externe_pagina_s">Externe Pagina's</h3>
 <div class="level3">
 <ul>
-<li class="level1"><div class="li"><a href="BFdances.html#mazurka" class="urlextern" title="http://celticbompa.4t.com/BFdances.html#mazurka" rel="nofollow">Celtic Bompa Mazurka</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="BFdances.html#mazurka" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#mazurka">Celtic Bompa Mazurka</a></div>
 </li>
-<li class="level1"><div class="li"><a href="Wattrelos20040131.html#mazurka" class="urlextern" title="http://celticbompa.4t.com/Wattrelos20040131.html#mazurka" rel="nofollow">Celtic Bompa Workshop Mazurka Variaties door Bernard Coclet aantekeningen</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="Wattrelos20040131.html#mazurka" rel="nofollow" title="http://celticbompa.4t.com/Wattrelos20040131.html#mazurka">Celtic Bompa Workshop Mazurka Variaties door Bernard Coclet aantekeningen</a></div>
 </li>
-<li class="level1"><div class="li"><a href="Koen200403.html#mazurka" class="urlextern" title="http://celticbompa.4t.com/Koen200403.html#mazurka" rel="nofollow">Celtic Bompa Workshop Mazurka door Koen aantekeningen</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="Koen200403.html#mazurka" rel="nofollow" title="http://celticbompa.4t.com/Koen200403.html#mazurka">Celtic Bompa Workshop Mazurka door Koen aantekeningen</a></div>
 </li>
 </ul>
 
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
