--- a/source/web/dansen/rond_de_saint-vincent.html
+++ b/source/web/dansen/rond_de_saint-vincent.html
@@ -1,16 +1,16 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕rond_de_saint-vincent.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕rond_de_saint-vincent.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
-<div class="pull-right hidden-print dw-toc-affix" data-spy="affix" data-offset-top="150"><!-- TOC START -->
-<nav id="dokuwiki__toc" class="panel panel-default" role="navigation">
-<div class="panel-heading"><h3 class="panel-title open" data-toggle="collapse" data-target="#dokuwiki__toc .panel-collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
+<div class="pull-right hidden-print dw-toc-affix" data-offset-top="150" data-spy="affix"><!-- TOC START -->
+<nav class="panel panel-default" id="dokuwiki__toc" role="navigation">
+<div class="panel-heading"><h3 class="panel-title open" data-target="#dokuwiki__toc .panel-collapse" data-toggle="collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
 <div class="panel-collapse collapse in">
 <div class="panel-body">
 
@@ -24,7 +24,7 @@
 </ul>
 </li>
 <li class="level3"><a href="#voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</a></li>
-<li class="level3"><a href="#externe_pagina_s">Externe Pagina&#039;s</a></li>
+<li class="level3"><a href="#externe_pagina_s">Externe Pagina's</a></li>
 </ul>
 
 </div>
@@ -109,20 +109,21 @@ Vooral als je heel snel wilt dansen, maximaal zes personen per kring.
 <li class="level1"><div class="li">Rond de Saint Vincent</div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/UjTZ13zRNPw" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/UjTZ13zRNPw" width="425"></iframe>
 </div>
 
-<h3 class="sectionedit7" id="externe_pagina_s">Externe Pagina&#039;s</h3>
+<h3 class="sectionedit7" id="externe_pagina_s">Externe Pagina's</h3>
 <div class="level3">
 <ul>
-<li class="level1"><div class="li"><a href="Rond_de_Saint-Vincent-sur-Oust" class="urlextern" title="http://tkpedia.tamm-kreiz.com/index.php/Rond_de_Saint-Vincent-sur-Oust" rel="nofollow">Rond de Saint Vincent-sur-Oust op TKPédia</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="Rond_de_Saint-Vincent-sur-Oust" rel="nofollow" title="http://tkpedia.tamm-kreiz.com/index.php/Rond_de_Saint-Vincent-sur-Oust">Rond de Saint Vincent-sur-Oust op TKPédia</a></div>
 </li>
 </ul>
 
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
