--- a/source/web/dansen/rondo.html
+++ b/source/web/dansen/rondo.html
@@ -1,16 +1,16 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕rondo.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕rondo.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
-<div class="pull-right hidden-print dw-toc-affix" data-spy="affix" data-offset-top="150"><!-- TOC START -->
-<nav id="dokuwiki__toc" class="panel panel-default" role="navigation">
-<div class="panel-heading"><h3 class="panel-title open" data-toggle="collapse" data-target="#dokuwiki__toc .panel-collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
+<div class="pull-right hidden-print dw-toc-affix" data-offset-top="150" data-spy="affix"><!-- TOC START -->
+<nav class="panel panel-default" id="dokuwiki__toc" role="navigation">
+<div class="panel-heading"><h3 class="panel-title open" data-target="#dokuwiki__toc .panel-collapse" data-toggle="collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
 <div class="panel-collapse collapse in">
 <div class="panel-body">
 
@@ -70,7 +70,7 @@ Armzwaai van langs het lichaam naar iets omhoog op elke eerste tel van elke maat
 <h4 class="sectionedit4" id="variaties">Variaties</h4>
 <div class="level4">
 <ul>
-<li class="level1"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕rondeau_en_couple.html" class="wikilink2" title="nl:dansen:rondeau_en_couple" rel="nofollow">Rondeau en Couple</a></div>
+<li class="level1"><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕rondeau_en_couple.html" rel="nofollow" title="nl:dansen:rondeau_en_couple">Rondeau en Couple</a></div>
 </li>
 </ul>
 
@@ -82,11 +82,12 @@ Armzwaai van langs het lichaam naar iets omhoog op elke eerste tel van elke maat
 <li class="level1"><div class="li">Rondeau en Couple (door Bert Leemans en Jeroen Geerinck) </div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/rtVukyXDG0M" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/rtVukyXDG0M" width="425"></iframe>
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
