--- a/source/web/dansen/wals/wals_in_8_tijden.html
+++ b/source/web/dansen/wals/wals_in_8_tijden.html
@@ -1,10 +1,10 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_8_tijden.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_8_tijden.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
@@ -13,7 +13,7 @@
 <div class="level3">
 
 <p>
-Zie de <a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_5_tijden.html" class="wikilink1" title="nl:dansen:wals:wals_in_5_tijden">wals in 5 tijden</a>.
+Zie de <a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_5_tijden.html" title="nl:dansen:wals:wals_in_5_tijden">wals in 5 tijden</a>.
 </p>
 
 <p>
@@ -40,11 +40,12 @@ Er zijn de volgende tellingen mogelijk:
 <li class="level1"><div class="li">Wals in 8 tijden (123 - 12 - 123) door Eric Theze (boombalfestival 2009): </div>
 </li>
 </ul>
-<iframe src="https://www.youtube.com/embed/eEkhL88ElRM" height="350" width="425" class="vshare__none" allowfullscreen="" frameborder="0" scrolling="no"></iframe>
+<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/eEkhL88ElRM" width="425"></iframe>
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
