--- a/source/web/events/boombalstage.html
+++ b/source/web/events/boombalstage.html
@@ -1,22 +1,22 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕event﹕boombalstage.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕event﹕boombalstage.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
-<div class="pull-right hidden-print dw-toc-affix" data-spy="affix" data-offset-top="150"><!-- TOC START -->
-<nav id="dokuwiki__toc" class="panel panel-default" role="navigation">
-<div class="panel-heading"><h3 class="panel-title open" data-toggle="collapse" data-target="#dokuwiki__toc .panel-collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
+<div class="pull-right hidden-print dw-toc-affix" data-offset-top="150" data-spy="affix"><!-- TOC START -->
+<nav class="panel panel-default" id="dokuwiki__toc" role="navigation">
+<div class="panel-heading"><h3 class="panel-title open" data-target="#dokuwiki__toc .panel-collapse" data-toggle="collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
 <div class="panel-collapse collapse in">
 <div class="panel-body">
 
 <ul class="nav nav-pills nav-stacked toc">
 <li class="level3"><a href="#boombal_stage">Boombal Stage</a></li>
-<li class="level3"><a href="#externe_pagina_s">Externe Pagina&#039;s</a>
+<li class="level3"><a href="#externe_pagina_s">Externe Pagina's</a>
 <ul class="nav nav-pills nav-stacked toc">
 <li class="level4"><a href="#referenties_en_bronnen">Referenties en bronnen</a></li>
 </ul></li>
@@ -31,15 +31,15 @@
 <div class="level3">
 
 <p>
-De Boombal stage wordt ieder jaar georganiseerd voor het <a href="doku.php﹖id=doku.php﹖id=nl﹕event﹕boombalfestival.html" class="wikilink1" title="nl:event:boombalfestival">Boombal festival</a>. Tijdens deze stage wordt er in 3 niveaus les gegeven in balfolk.
+De Boombal stage wordt ieder jaar georganiseerd voor het <a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕event﹕boombalfestival.html" title="nl:event:boombalfestival">Boombal festival</a>. Tijdens deze stage wordt er in 3 niveaus les gegeven in balfolk.
 </p>
 
 </div>
 
-<h3 class="sectionedit2" id="externe_pagina_s">Externe Pagina&#039;s</h3>
+<h3 class="sectionedit2" id="externe_pagina_s">Externe Pagina's</h3>
 <div class="level3">
 <ul>
-<li class="level1"><div class="li"><a href="http://www.boombalfestival.be/stage/" class="urlextern" title="http://www.boombalfestival.be/stage/" rel="nofollow">Officiële website</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="http://www.boombalfestival.be/stage/" rel="nofollow" title="http://www.boombalfestival.be/stage/">Officiële website</a></div>
 </li>
 </ul>
 
@@ -51,7 +51,8 @@ De Boombal stage wordt ieder jaar georganiseerd voor het <a href="doku.php﹖id=
 </div>
 
 </div>
-          </div>
-        </div>
+          
+        
 
       </article>
+</body></html>
