--- a/source/web/events/castlefest.html
+++ b/source/web/events/castlefest.html
@@ -1,4 +1,4 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
         <div class="panel panel-default">
           <div class="page panel-body">
@@ -41,22 +41,22 @@
           </li>
         </ul>
       </div>
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕event﹕castlefest.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕event﹕castlefest.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
-<div class="pull-right hidden-print dw-toc-affix" data-spy="affix" data-offset-top="150"><!-- TOC START -->
-<nav id="dokuwiki__toc" class="panel panel-default" role="navigation">
-<div class="panel-heading"><h3 class="panel-title open" data-toggle="collapse" data-target="#dokuwiki__toc .panel-collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
+<div class="pull-right hidden-print dw-toc-affix" data-offset-top="150" data-spy="affix"><!-- TOC START -->
+<nav class="panel panel-default" id="dokuwiki__toc" role="navigation">
+<div class="panel-heading"><h3 class="panel-title open" data-target="#dokuwiki__toc .panel-collapse" data-toggle="collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
 <div class="panel-collapse collapse in">
 <div class="panel-body">
 
 <ul class="nav nav-pills nav-stacked toc">
 <li class="level3"><a href="#castlefest">Castlefest</a></li>
-<li class="level3"><a href="#externe_pagina_s">Externe Pagina&#039;s</a>
+<li class="level3"><a href="#externe_pagina_s">Externe Pagina's</a>
 <ul class="nav nav-pills nav-stacked toc">
 <li class="level4"><a href="#referenties_en_bronnen">Referenties en bronnen</a></li>
 </ul></li>
@@ -71,19 +71,19 @@
 <div class="level3">
 
 <p>
-Castlefest is een middeleeuws en fantasyfestival, dat sinds 2005 ieder jaar begin augustus wordt gehouden in de tuinen van Kasteel Keukenhof in Lisse in Nederland. Het festival duurt drie dagen, plus (sinds 2011) een openingsconcert op de donderdag voorafgaand aan het festival. Bij de eerste editie kwamen 3.500 mensen naar het evenement. Editie 2007 trok al 16.000 bezoekers en in 2011 mocht Castlefest ruim 24.000 bezoekers verwelkomen. In 2015 werd het recordaantal van 35.000 bezoekers behaald<sup><a href="#refnotes:1:note1" name="refnotes:1:ref1" class="refnotes-ref note-popup">1)</a></sup>.
+Castlefest is een middeleeuws en fantasyfestival, dat sinds 2005 ieder jaar begin augustus wordt gehouden in de tuinen van Kasteel Keukenhof in Lisse in Nederland. Het festival duurt drie dagen, plus (sinds 2011) een openingsconcert op de donderdag voorafgaand aan het festival. Bij de eerste editie kwamen 3.500 mensen naar het evenement. Editie 2007 trok al 16.000 bezoekers en in 2011 mocht Castlefest ruim 24.000 bezoekers verwelkomen. In 2015 werd het recordaantal van 35.000 bezoekers behaald<sup><a class="refnotes-ref note-popup" href="#refnotes:1:note1" name="refnotes:1:ref1">1)</a></sup>.
 </p>
 
 <p>
-Voor meer info, zie de <a href="https://nl.wikipedia.org/wiki/Castlefest" class="urlextern" title="https://nl.wikipedia.org/wiki/Castlefest" rel="nofollow">Wikipedia pagina over Castlefest</a>
+Voor meer info, zie de <a class="urlextern" href="https://nl.wikipedia.org/wiki/Castlefest" rel="nofollow" title="https://nl.wikipedia.org/wiki/Castlefest">Wikipedia pagina over Castlefest</a>
 </p>
 
 </div>
 
-<h3 class="sectionedit2" id="externe_pagina_s">Externe Pagina&#039;s</h3>
+<h3 class="sectionedit2" id="externe_pagina_s">Externe Pagina's</h3>
 <div class="level3">
 <ul>
-<li class="level1"><div class="li"><a href="http://www.castlefest.nl/" class="urlextern" title="http://www.castlefest.nl/" rel="nofollow">Officiële website</a></div>
+<li class="level1"><div class="li"><a class="urlextern" href="http://www.castlefest.nl/" rel="nofollow" title="http://www.castlefest.nl/">Officiële website</a></div>
 </li>
 </ul>
 
@@ -92,12 +92,12 @@ Voor meer info, zie de <a href="https://nl.wikipedia.org/wiki/Castlefest" class=
 <h4 class="sectionedit3" id="referenties_en_bronnen">Referenties en bronnen</h4>
 <div class="level4">
 <div class="refnotes">
-<hr>
+<hr/>
 <div class="notes">
 <div class="note justify">
-<sup><b><a href="#refnotes:1:ref1" name="refnotes:1:note1" class="backref">1)</a></b></sup>
+<sup><b><a class="backref" href="#refnotes:1:ref1" name="refnotes:1:note1">1)</a></b></sup>
 <span id="refnotes:1:note1:text">
-Wikipedia artikel over Castlefest <a href="https://nl.wikipedia.org/wiki/Castlefest" class="urlextern" title="https://nl.wikipedia.org/wiki/Castlefest" rel="nofollow">https://nl.wikipedia.org/wiki/Castlefest</a>
+Wikipedia artikel over Castlefest <a class="urlextern" href="https://nl.wikipedia.org/wiki/Castlefest" rel="nofollow" title="https://nl.wikipedia.org/wiki/Castlefest">https://nl.wikipedia.org/wiki/Castlefest</a>
 </span></div>
 </div>
 </div>
@@ -109,3 +109,4 @@ Wikipedia artikel over Castlefest <a href="https://nl.wikipedia.org/wiki/Castlef
         </div>
 
       </article>
+</body></html>
