--- a/source/web/start_do.html
+++ b/source/web/start_do.html
@@ -1,16 +1,16 @@
-<article id="dokuwiki__content" class="container">
+<html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div id="dw__pagetools" class="hidden-print panel panel-default">
+<div class="hidden-print panel panel-default" id="dw__pagetools">
   <div class="tools">
     <ul class="nav nav-stacked nav-pills">
-</span></a></li><li><a href="doku.php﹖id=doku.php﹖id=nl﹕start.html" class="action text-muted backlink" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></span></a></li>    </ul>
+<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕start.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
   </div>
 </div>
 
-<div class="pull-right hidden-print dw-toc-affix" data-spy="affix" data-offset-top="150"><!-- TOC START -->
-<nav id="dokuwiki__toc" class="panel panel-default" role="navigation">
-<div class="panel-heading"><h3 class="panel-title open" data-toggle="collapse" data-target="#dokuwiki__toc .panel-collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
+<div class="pull-right hidden-print dw-toc-affix" data-offset-top="150" data-spy="affix"><!-- TOC START -->
+<nav class="panel panel-default" id="dokuwiki__toc" role="navigation">
+<div class="panel-heading"><h3 class="panel-title open" data-target="#dokuwiki__toc .panel-collapse" data-toggle="collapse"><i class="fa fa-th-list"></i> <span>Inhoud</span> <i class="caret"></i></h3></div>
 <div class="panel-collapse collapse in">
 <div class="panel-body">
 
@@ -38,7 +38,7 @@
 <!-- TOC END -->
 </div><div class="dw-content">
 <p>
-Deze pagina is een alias naar de Nederlandse startpagina. De echte pagina staat hier: <a href="doku.php﹖id=doku.php﹖id=nl﹕start.html" class="wikilink1" title="nl:start">Start</a>
+Deze pagina is een alias naar de Nederlandse startpagina. De echte pagina staat hier: <a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕start.html" title="nl:start">Start</a>
 </p>
 <div class="plugin_include_content plugin_include__nl:start" id="plugin_include__nl__start">
 
@@ -46,7 +46,7 @@ Deze pagina is een alias naar de Nederlandse startpagina. De echte pagina staat 
 <div class="level1">
 
 <p>
-Deze wiki bevat informatie over verschillende balfolk dansen, hun variaties en tips voor dansers, instructeurs en muzikanten. Iedereen is welkom om de informatie op deze site te verbeteren en aan te vullen, daarvoor kun je je <a href="doku.php﹖id=doku.php﹖id=nl﹕start.html" class="urlextern" title="doku.php﹖id=doku.php﹖id=nl﹕start.html" rel="nofollow">hier</a> aanmelden om een account te maken.
+Deze wiki bevat informatie over verschillende balfolk dansen, hun variaties en tips voor dansers, instructeurs en muzikanten. Iedereen is welkom om de informatie op deze site te verbeteren en aan te vullen, daarvoor kun je je <a class="urlextern" href="doku.php﹖id=doku.php﹖id=nl﹕start.html" rel="nofollow" title="doku.php﹖id=doku.php﹖id=nl﹕start.html">hier</a> aanmelden om een account te maken.
 </p>
 
 <p>
@@ -54,7 +54,7 @@ De oorspronkelijke DansWiki werd hoofdzakelijk onderhouden en gehost door de Gon
 </p>
 
 <p>
-Deze DansWiki is ook nog vol in ontwikkeling en het zou kunnen dat er aan het thema e.d. nog het een en ander veranderd te komende tijd. Mocht je zelf nog (nuttige) suggesties hebben voor verbeteringen en/of aanpassingen, laat het dan vooral even weten! Dit kan door een berichtje te sturen naar <a href="" class="urlextern" title="http://www.BalfolkEnschede.nl" rel="nofollow">Balfolk Enschede</a>, of door het aan te geven op de <a href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕gevraagd.html" class="wikilink1" title="nl:algemeen:gevraagd">gevraagd</a> pagina onder verbeteringen.
+Deze DansWiki is ook nog vol in ontwikkeling en het zou kunnen dat er aan het thema e.d. nog het een en ander veranderd te komende tijd. Mocht je zelf nog (nuttige) suggesties hebben voor verbeteringen en/of aanpassingen, laat het dan vooral even weten! Dit kan door een berichtje te sturen naar <a class="urlextern" href="" rel="nofollow" title="http://www.BalfolkEnschede.nl">Balfolk Enschede</a>, of door het aan te geven op de <a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕gevraagd.html" title="nl:algemeen:gevraagd">gevraagd</a> pagina onder verbeteringen.
 </p>
 
 </div>
@@ -62,21 +62,21 @@ Deze DansWiki is ook nog vol in ontwikkeling en het zou kunnen dat er aan het th
 <h1 class="sectionedit4" id="algemeen">Algemeen</h1>
 <div class="level1">
 <ul>
-<li class="level1"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕balfolk.html" class="wikilink1" title="nl:algemeen:balfolk">Balfolk</a>	</div>
+<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕balfolk.html" title="nl:algemeen:balfolk">Balfolk</a>	</div>
 </li>
-<li class="level1"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danshouding.html" class="wikilink1" title="nl:algemeen:danshouding">Danshouding</a></div>
+<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danshouding.html" title="nl:algemeen:danshouding">Danshouding</a></div>
 </li>
-<li class="level1"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕etikette.html" class="wikilink1" title="nl:algemeen:etikette">Etikette</a></div>
+<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕etikette.html" title="nl:algemeen:etikette">Etikette</a></div>
 </li>
-<li class="level1"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕gevraagd.html" class="wikilink1" title="nl:algemeen:gevraagd">Gevraagd</a></div>
+<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕gevraagd.html" title="nl:algemeen:gevraagd">Gevraagd</a></div>
 </li>
-<li class="level1"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕links.html" class="wikilink1" title="nl:algemeen:links">Links</a></div>
+<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕links.html" title="nl:algemeen:links">Links</a></div>
 </li>
-<li class="level1"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕nieuws.html" class="wikilink1" title="nl:algemeen:nieuws">Nieuws</a></div>
+<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕nieuws.html" title="nl:algemeen:nieuws">Nieuws</a></div>
 </li>
-<li class="level1"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕terminologie.html" class="wikilink1" title="nl:algemeen:terminologie">Terminologie</a></div>
+<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕terminologie.html" title="nl:algemeen:terminologie">Terminologie</a></div>
 </li>
-<li class="level1"><div class="li">Hoe werkt de <a href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danswiki.html" class="wikilink1" title="nl:algemeen:danswiki">DansWiki</a></div>
+<li class="level1"><div class="li">Hoe werkt de <a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danswiki.html" title="nl:algemeen:danswiki">DansWiki</a></div>
 </li>
 </ul>
 
@@ -85,17 +85,12 @@ Deze DansWiki is ook nog vol in ontwikkeling en het zou kunnen dat er aan het th
 <h1 class="sectionedit5" id="dansen">Dansen</h1>
 <div class="level1">
 <ul>
-<li class="level1 node"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕an_dro.html" class="wikilink1" title="nl:dansen:an_dro">An Dro</a></div>
+<li class="level1 node"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕an_dro.html" title="nl:dansen:an_dro">An Dro</a></div>
 <ul>
-<li class="level2"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕an_dro.html" class="wikilink1" title="nl:dansen:an_dro:an_dro_retourne">An Dro retourné</a>     </div>
+<li class="level2"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕an_dro.html" title="nl:dansen:an_dro:an_dro_retourne">An Dro retourné</a>     </div>
 </li>
 </ul>
 </li>
-<li class="level1 node"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕kadootjesbourree.html" class="wikilink1" title="nl:dansen:bourree_du_berry">Bourrée du Berry</a> (Bourrée in 2)</div>
+<li class="level1 node"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕kadootjesbourree.html" title="nl:dansen:bourree_du_berry">Bourrée du Berry</a> (Bourrée in 2)</div>
 <ul>
-<li class="level2"><div class="li"><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕bourree_en_cercle.html" class="wikilink1" title="nl:dansen:bourree_du_berry:bour
-</div>
-          </div>
-        </div>
-
-      </article>
+<li class="level2"><div class="li"></div></li></ul></li></ul></div></div></div></article></body></html>
